#9 Updated NSPa -NSPo classes

--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentAgent.yml
@@ -1362,7 +1362,7 @@ items:
   nameWithType: NSAppointmentAgent.GetMyDiary(Integer)
   fullName: CRMScript.NetServer.NSAppointmentAgent.GetMyDiary(Integer)
   type: Method
-  summary: "\nReturns a specified number of appointments within a time range. The appointments belong to the currently logged on user.\n"
+  summary: "\nReturns a specified number of appointments within a time range. The appointments belong to the currently logged-on user.\n"
   remarks: "\nIt returns only appointments that would be displayed in the user's diary.\n"
   syntax: 
     content: NSAppointment[] GetMyDiary(DateTime startTime, DateTime endTime, Integer count)
@@ -1411,7 +1411,7 @@ items:
   nameWithType: NSAppointmentAgent.GetMySyncAppointments()
   fullName: CRMScript.NetServer.NSAppointmentAgent.GetMySyncAppointments()
   type: Method
-  summary: "\nReturns a specified number of appointments within a time range. The appointments belong to the currently logged on user.\n"
+  summary: "\nReturns a specified number of appointments within a time range. The appointments belong to the currently logged-on user.\n"
   remarks: 
   syntax: 
     content: AppointmentSyncData[] GetMySyncAppointments(DateTime startTime, DateTime endTime)
@@ -1437,7 +1437,7 @@ items:
   nameWithType: NSAppointmentAgent.GetMyTasks(Integer)
   fullName: CRMScript.NetServer.NSAppointmentAgent.GetMyTasks(Integer)
   type: Method
-  summary: "\nReturns a specified number of appointments within a time range. The appointments belong to the currently logged on user.\n"
+  summary: "\nReturns a specified number of appointments within a time range. The appointments belong to the currently logged-on user.\n"
   remarks: "\nIt returns only appointments that would be displayed in the user's task list.\n"
   syntax: 
     content: NSAppointment[] GetMyTasks(Integer count)
@@ -1513,7 +1513,7 @@ items:
   fullName: CRMScript.NetServer.NSAppointmentAgent.GetPersonAppointments(Integer,Bool,Integer)
   type: Method
   summary: "\nReturns a specified number of appointments within a time range. The appointments belong to the person specified.\n"
-  remarks: "\n If the person not is a SuperOffice user (associate) or the logged on user is not allowed to view this persons appointments an exception is thrown.\n"
+  remarks: "\n If the person not is a SuperOffice user (associate) or the logged-on user is not allowed to view this persons appointments an exception is thrown.\n"
   syntax: 
     content: NSAppointment[] GetPersonAppointments(Integer personId, Bool includeProjectAppointments, DateTime startTime, DateTime endTime, Integer count)
     parameters:
@@ -1700,7 +1700,7 @@ items:
   fullName: CRMScript.NetServer.NSAppointmentAgent.GetPersonDiary(Integer,Integer)
   type: Method
   summary: "\nReturns a specified number of appointments within a time range.\n"
-  remarks: "\nIt only returns appointments that would be displayed in the user's diary. The appointments belong to the person specified. If the person not is a SuperOffice user (associate) or the logged on user is not allowed to view this persons appointments an exception is thrown.\n"
+  remarks: "\nIt only returns appointments that would be displayed in the user's diary. The appointments belong to the person specified. If the person not is a SuperOffice user (associate) or the logged-on user is not allowed to view this persons appointments an exception is thrown.\n"
   syntax: 
     content: NSAppointment[] GetPersonDiary(Integer personId, DateTime startTime, DateTime endTime, Integer count)
     parameters:
@@ -1732,7 +1732,7 @@ items:
   fullName: CRMScript.NetServer.NSAppointmentAgent.GetPersonTasks(Integer,Integer)
   type: Method
   summary: "\nReturns a specified number of appointments within a time range.\n"
-  remarks: "\n It only returns appointments that would be displayed in the user's task list. The appointments belong to the person specified. If the person not is a SuperOffice user (associate) or the logged on user is not allowed to view this persons appointments an exception is thrown.\n"
+  remarks: "\n It only returns appointments that would be displayed in the user's task list. The appointments belong to the person specified. If the person not is a SuperOffice user (associate) or the logged-on user is not allowed to view this persons appointments an exception is thrown.\n"
   syntax: 
     content: NSAppointment[] GetPersonTasks(Integer personId, Integer count)
     parameters:
@@ -1758,7 +1758,7 @@ items:
   fullName: CRMScript.NetServer.NSAppointmentAgent.GetProjectAppointments(Integer,Integer)
   type: Method
   summary: "\nReturns a specified number of appointments within a time range. The appointments belong to the project specified.\n"
-  remarks: "\nIf the logged on user is not allowed to view this projects appointments an exception is thrown.\n"
+  remarks: "\nIf the logged-on user is not allowed to view this projects appointments an exception is thrown.\n"
   syntax: 
     content: NSAppointment[] GetProjectAppointments(Integer projectId, DateTime startTime, DateTime endTime, Integer count)
     parameters:
