--- a/docs/api-reference/CRMScript.NetServer.NSConfigurationAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSConfigurationAgent.yml
@@ -577,7 +577,7 @@ items:
   nameWithType: NSConfigurationAgent.GetMyWindowPosSizes()
   fullName: CRMScript.NetServer.NSConfigurationAgent.GetMyWindowPosSizes()
   type: Method
-  summary: "\nGets the window and dialog position and size settings belonging to the currently logged on user.\n"
+  summary: "\nGets the window and dialog position and size settings belonging to the currently logged-on user.\n"
   remarks: 
   syntax: 
     content: NSWindowPosSize[] GetMyWindowPosSizes()
