--- a/docs/api-reference/CRMScript.NetServer.NSContactAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactAgent.yml
@@ -495,7 +495,7 @@ items:
   nameWithType: NSContactAgent.GetMyContact()
   fullName: CRMScript.NetServer.NSContactAgent.GetMyContact()
   type: Method
-  summary: "\nGets the contact belonging to the currently logged on user.\n"
+  summary: "\nGets the contact belonging to the currently logged-on user.\n"
   remarks: 
   syntax: 
     content: NSContactEntity GetMyContact()
@@ -514,7 +514,7 @@ items:
   nameWithType: NSContactAgent.GetMyContacts()
   fullName: CRMScript.NetServer.NSContactAgent.GetMyContacts()
   type: Method
-  summary: "\nGetting the contacts where the user currently logged in is set as contact owner.<p></p>\n<strong>Returns:</strong>NSContact[]<p></p>\n<pre><code>NSContactAgent agent;\nNSContact[] res = agent.GetMyContacts();</code></pre>\n"
+  summary: "\nGets the contacts where the user currently logged in is set as contact owner.<p></p>\n<strong>Returns:</strong>NSContact[]<p></p>\n<pre><code>NSContactAgent agent;\nNSContact[] res = agent.GetMyContacts();</code></pre>\n"
   remarks: 
   syntax: 
     content: NSContact[] GetMyContacts()
