--- a/docs/api-reference/CRMScript.NetServer.NSMailMergeTask.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMailMergeTask.yml
@@ -80,7 +80,7 @@ items:
   nameWithType: NSMailMergeTask.GetDescription()
   fullName: CRMScript.NetServer.NSMailMergeTask.GetDescription()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -100,7 +100,7 @@ items:
   nameWithType: NSMailMergeTask.GetDuration()
   fullName: CRMScript.NetServer.NSMailMergeTask.GetDuration()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDuration()
@@ -120,7 +120,7 @@ items:
   nameWithType: NSMailMergeTask.GetOwnerAssociateId()
   fullName: CRMScript.NetServer.NSMailMergeTask.GetOwnerAssociateId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: "\nIf value is 0, the recipient owner(our contact) will be used.\n"
   syntax: 
     content: Integer GetOwnerAssociateId()
@@ -140,7 +140,7 @@ items:
   nameWithType: NSMailMergeTask.GetPriorityId()
   fullName: CRMScript.NetServer.NSMailMergeTask.GetPriorityId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetPriorityId()
@@ -160,7 +160,7 @@ items:
   nameWithType: NSMailMergeTask.GetProjectId()
   fullName: CRMScript.NetServer.NSMailMergeTask.GetProjectId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetProjectId()
@@ -180,7 +180,7 @@ items:
   nameWithType: NSMailMergeTask.GetSaleId()
   fullName: CRMScript.NetServer.NSMailMergeTask.GetSaleId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSaleId()
@@ -200,7 +200,7 @@ items:
   nameWithType: NSMailMergeTask.GetSingleEntryOnEachCompany()
   fullName: CRMScript.NetServer.NSMailMergeTask.GetSingleEntryOnEachCompany()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetSingleEntryOnEachCompany()
@@ -220,7 +220,7 @@ items:
   nameWithType: NSMailMergeTask.GetStartDate()
   fullName: CRMScript.NetServer.NSMailMergeTask.GetStartDate()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetStartDate()
@@ -240,7 +240,7 @@ items:
   nameWithType: NSMailMergeTask.GetTypeId()
   fullName: CRMScript.NetServer.NSMailMergeTask.GetTypeId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetTypeId()
@@ -260,7 +260,7 @@ items:
   nameWithType: NSMailMergeTask.GetVisibleFor()
   fullName: CRMScript.NetServer.NSMailMergeTask.GetVisibleFor()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: VisibleFor GetVisibleFor()
@@ -280,7 +280,7 @@ items:
   nameWithType: NSMailMergeTask.SetCompleted(Integer)
   fullName: CRMScript.NetServer.NSMailMergeTask.SetCompleted(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCompleted(Integer completed)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSMailMergeTask.SetDescription(String)
   fullName: CRMScript.NetServer.NSMailMergeTask.SetDescription(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSMailMergeTask.SetDuration(Integer)
   fullName: CRMScript.NetServer.NSMailMergeTask.SetDuration(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDuration(Integer duration)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSMailMergeTask.SetPriorityId(Integer)
   fullName: CRMScript.NetServer.NSMailMergeTask.SetPriorityId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPriorityId(Integer priorityId)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSMailMergeTask.SetProjectId(Integer)
   fullName: CRMScript.NetServer.NSMailMergeTask.SetProjectId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetProjectId(Integer projectId)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSMailMergeTask.SetSaleId(Integer)
   fullName: CRMScript.NetServer.NSMailMergeTask.SetSaleId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSaleId(Integer saleId)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSMailMergeTask.SetSingleEntryOnEachCompany(Bool)
   fullName: CRMScript.NetServer.NSMailMergeTask.SetSingleEntryOnEachCompany(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSingleEntryOnEachCompany(Bool singleEntryOnEachCompany)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSMailMergeTask.SetStartDate(DateTime)
   fullName: CRMScript.NetServer.NSMailMergeTask.SetStartDate(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetStartDate(DateTime startDate)
@@ -476,7 +476,7 @@ items:
   nameWithType: NSMailMergeTask.SetTypeId(Integer)
   fullName: CRMScript.NetServer.NSMailMergeTask.SetTypeId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTypeId(Integer typeId)
@@ -498,7 +498,7 @@ items:
   nameWithType: NSMailMergeTask.SetVisibleFor(VisibleFor)
   fullName: CRMScript.NetServer.NSMailMergeTask.SetVisibleFor(VisibleFor)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetVisibleFor(VisibleFor visibleFor)
