--- a/docs/api-reference/CRMScript.NetServer.NSMailbox.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMailbox.yml
@@ -46,7 +46,7 @@ items:
   nameWithType: NSMailbox.GetAddress()
   fullName: CRMScript.NetServer.NSMailbox.GetAddress()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetAddress()
@@ -86,7 +86,7 @@ items:
   nameWithType: NSMailbox.GetMailInFilterId()
   fullName: CRMScript.NetServer.NSMailbox.GetMailInFilterId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetMailInFilterId()
@@ -106,7 +106,7 @@ items:
   nameWithType: NSMailbox.GetPriorityName()
   fullName: CRMScript.NetServer.NSMailbox.GetPriorityName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetPriorityName()
@@ -126,7 +126,7 @@ items:
   nameWithType: NSMailbox.SetAddress(String)
   fullName: CRMScript.NetServer.NSMailbox.SetAddress(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAddress(String address)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSMailbox.SetCategoryName(String)
   fullName: CRMScript.NetServer.NSMailbox.SetCategoryName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCategoryName(String categoryName)
