--- a/docs/api-reference/CRMScript.NetServer.NSMailboxEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMailboxEntity.yml
@@ -52,7 +52,7 @@ items:
   nameWithType: NSMailboxEntity.GetAddress()
   fullName: CRMScript.NetServer.NSMailboxEntity.GetAddress()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetAddress()
@@ -72,7 +72,7 @@ items:
   nameWithType: NSMailboxEntity.GetMailInFilterId()
   fullName: CRMScript.NetServer.NSMailboxEntity.GetMailInFilterId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetMailInFilterId()
@@ -92,7 +92,7 @@ items:
   nameWithType: NSMailboxEntity.GetPassword()
   fullName: CRMScript.NetServer.NSMailboxEntity.GetPassword()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetPassword()
@@ -112,7 +112,7 @@ items:
   nameWithType: NSMailboxEntity.GetPort()
   fullName: CRMScript.NetServer.NSMailboxEntity.GetPort()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetPort()
@@ -132,7 +132,7 @@ items:
   nameWithType: NSMailboxEntity.GetServer()
   fullName: CRMScript.NetServer.NSMailboxEntity.GetServer()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetServer()
@@ -192,7 +192,7 @@ items:
   nameWithType: NSMailboxEntity.SetAddress(String)
   fullName: CRMScript.NetServer.NSMailboxEntity.SetAddress(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAddress(String address)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSMailboxEntity.SetMailInFilterId(Integer)
   fullName: CRMScript.NetServer.NSMailboxEntity.SetMailInFilterId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetMailInFilterId(Integer mailInFilterId)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSMailboxEntity.SetPassword(String)
   fullName: CRMScript.NetServer.NSMailboxEntity.SetPassword(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPassword(String password)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSMailboxEntity.SetPort(Integer)
   fullName: CRMScript.NetServer.NSMailboxEntity.SetPort(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPort(Integer port)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSMailboxEntity.SetServer(String)
   fullName: CRMScript.NetServer.NSMailboxEntity.SetServer(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetServer(String server)
@@ -302,8 +302,8 @@ items:
   nameWithType: NSMailboxEntity.SetServerType(Integer)
   fullName: CRMScript.NetServer.NSMailboxEntity.SetServerType(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetServerType(Integer serverType)
     parameters:
@@ -324,7 +324,7 @@ items:
   nameWithType: NSMailboxEntity.SetUsername(String)
   fullName: CRMScript.NetServer.NSMailboxEntity.SetUsername(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUsername(String username)
