--- a/docs/api-reference/CRMScript.NetServer.NSMessageDeliveryStatus.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMessageDeliveryStatus.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSMessageDeliveryStatus.GetMessagingId()
   fullName: CRMScript.NetServer.NSMessageDeliveryStatus.GetMessagingId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetMessagingId()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSMessageDeliveryStatus.GetStatus()
   fullName: CRMScript.NetServer.NSMessageDeliveryStatus.GetStatus()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetStatus()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSMessageDeliveryStatus.GetStatusDescription()
   fullName: CRMScript.NetServer.NSMessageDeliveryStatus.GetStatusDescription()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetStatusDescription()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSMessageDeliveryStatus.SetMessagingId(Integer)
   fullName: CRMScript.NetServer.NSMessageDeliveryStatus.SetMessagingId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetMessagingId(Integer messagingId)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSMessageDeliveryStatus.SetStatus(Integer)
   fullName: CRMScript.NetServer.NSMessageDeliveryStatus.SetStatus(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetStatus(Integer status)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSMessageDeliveryStatus.SetStatusDescription(String)
   fullName: CRMScript.NetServer.NSMessageDeliveryStatus.SetStatusDescription(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetStatusDescription(String statusDescription)
