--- a/docs/api-reference/CRMScript.NetServer.NSModuleLicense.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSModuleLicense.yml
@@ -88,7 +88,7 @@ items:
   nameWithType: NSModuleLicense.GetExtraFlags()
   fullName: CRMScript.NetServer.NSModuleLicense.GetExtraFlags()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetExtraFlags()
@@ -108,7 +108,7 @@ items:
   nameWithType: NSModuleLicense.GetExtraInfo()
   fullName: CRMScript.NetServer.NSModuleLicense.GetExtraInfo()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: "\nFor rows with extraFlags=1 this field contains the list of modules that this plan comprises\n"
   syntax: 
     content: String GetExtraInfo()
@@ -128,7 +128,7 @@ items:
   nameWithType: NSModuleLicense.GetIsHidden()
   fullName: CRMScript.NetServer.NSModuleLicense.GetIsHidden()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetIsHidden()
@@ -228,7 +228,7 @@ items:
   nameWithType: NSModuleLicense.GetModuleVersion()
   fullName: CRMScript.NetServer.NSModuleLicense.GetModuleVersion()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetModuleVersion()
@@ -248,7 +248,7 @@ items:
   nameWithType: NSModuleLicense.GetNumberOfLicenses()
   fullName: CRMScript.NetServer.NSModuleLicense.GetNumberOfLicenses()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetNumberOfLicenses()
@@ -268,7 +268,7 @@ items:
   nameWithType: NSModuleLicense.GetOwnerName()
   fullName: CRMScript.NetServer.NSModuleLicense.GetOwnerName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: "\nOwnerName SUPEROFFICE is reserved and may NEVER be used by partners. This must be in UPPER CASE and only contain A-Z and 0-9. NO EXTENDED CHARACTERS please.\n"
   syntax: 
     content: String GetOwnerName()
@@ -288,7 +288,7 @@ items:
   nameWithType: NSModuleLicense.GetPrerequisiteModuleName()
   fullName: CRMScript.NetServer.NSModuleLicense.GetPrerequisiteModuleName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetPrerequisiteModuleName()
@@ -308,7 +308,7 @@ items:
   nameWithType: NSModuleLicense.GetSignature()
   fullName: CRMScript.NetServer.NSModuleLicense.GetSignature()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetSignature()
@@ -328,7 +328,7 @@ items:
   nameWithType: NSModuleLicense.GetSortOrder()
   fullName: CRMScript.NetServer.NSModuleLicense.GetSortOrder()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSortOrder()
@@ -348,7 +348,7 @@ items:
   nameWithType: NSModuleLicense.GetUnrestricted()
   fullName: CRMScript.NetServer.NSModuleLicense.GetUnrestricted()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetUnrestricted()
@@ -368,8 +368,8 @@ items:
   nameWithType: NSModuleLicense.SetAllowedUserType(Integer)
   fullName: CRMScript.NetServer.NSModuleLicense.SetAllowedUserType(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetAllowedUserType(Integer allowedUserType)
     parameters:
@@ -390,7 +390,7 @@ items:
   nameWithType: NSModuleLicense.SetExtraFlags(Integer)
   fullName: CRMScript.NetServer.NSModuleLicense.SetExtraFlags(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetExtraFlags(Integer extraFlags)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSModuleLicense.SetExtraInfo(String)
   fullName: CRMScript.NetServer.NSModuleLicense.SetExtraInfo(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: "\nFor rows with extraFlags=1 this field contains the list of modules that this plan comprises\n"
   syntax: 
     content: Void SetExtraInfo(String extraInfo)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSModuleLicense.SetIsHidden(Bool)
   fullName: CRMScript.NetServer.NSModuleLicense.SetIsHidden(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsHidden(Bool isHidden)
@@ -497,7 +497,7 @@ items:
   nameWithType: NSModuleLicense.SetModuleName(String)
   fullName: CRMScript.NetServer.NSModuleLicense.SetModuleName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetModuleName(String moduleName)
@@ -541,7 +541,7 @@ items:
   nameWithType: NSModuleLicense.SetModuleVersion(String)
   fullName: CRMScript.NetServer.NSModuleLicense.SetModuleVersion(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetModuleVersion(String moduleVersion)
@@ -563,7 +563,7 @@ items:
   nameWithType: NSModuleLicense.SetNumberOfLicenses(Integer)
   fullName: CRMScript.NetServer.NSModuleLicense.SetNumberOfLicenses(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetNumberOfLicenses(Integer numberOfLicenses)
@@ -585,7 +585,7 @@ items:
   nameWithType: NSModuleLicense.SetOwnerName(String)
   fullName: CRMScript.NetServer.NSModuleLicense.SetOwnerName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetOwnerName(String ownerName)
@@ -607,7 +607,7 @@ items:
   nameWithType: NSModuleLicense.SetPrerequisiteModuleName(String)
   fullName: CRMScript.NetServer.NSModuleLicense.SetPrerequisiteModuleName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPrerequisiteModuleName(String prerequisiteModuleName)
@@ -629,7 +629,7 @@ items:
   nameWithType: NSModuleLicense.SetSignature(String)
   fullName: CRMScript.NetServer.NSModuleLicense.SetSignature(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSignature(String signature)
@@ -651,7 +651,7 @@ items:
   nameWithType: NSModuleLicense.SetSortOrder(Integer)
   fullName: CRMScript.NetServer.NSModuleLicense.SetSortOrder(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSortOrder(Integer sortOrder)
@@ -673,7 +673,7 @@ items:
   nameWithType: NSModuleLicense.SetUnrestricted(Bool)
   fullName: CRMScript.NetServer.NSModuleLicense.SetUnrestricted(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUnrestricted(Bool unrestricted)
