--- a/docs/api-reference/CRMScript.NetServer.NSPaymentTerm.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPaymentTerm.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSPaymentTerm.#ctor
   - CRMScript.NetServer.NSPaymentTerm.GetId()
   - CRMScript.NetServer.NSPaymentTerm.GetTooltip()
   - CRMScript.NetServer.NSPaymentTerm.GetValue()
-  - CRMScript.NetServer.NSPaymentTerm.#ctor
   - CRMScript.NetServer.NSPaymentTerm.SetId(Integer)
   - CRMScript.NetServer.NSPaymentTerm.SetTooltip(String)
   - CRMScript.NetServer.NSPaymentTerm.SetValue(String)
@@ -19,66 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSPaymentTerm.GetId()
-  commentId: M:CRMScript.NetServer.NSPaymentTerm.GetId()
-  id: 'GetId()'
-  so.intellisense: NSPaymentTerm.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSPaymentTerm.GetId()
-  fullName: CRMScript.NetServer.NSPaymentTerm.GetId()
-  type: Method
-  summary: "\nGets the primary key (ID) for the NSPaymentTerm<p></p>\n<strong>Returns:</strong>Integer NSPaymentTerm id.<p></p>\n<pre><code>NSPaymentTerm thing;\nInteger id = thing.GetId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSPaymentTerm thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPaymentTerm.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSPaymentTerm.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSPaymentTerm.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSPaymentTerm.GetTooltip()
-  fullName: CRMScript.NetServer.NSPaymentTerm.GetTooltip()
-  type: Method
-  summary: "\nGets the tooltip description for the NSPaymentTerm list item.<p></p>\n<strong>Returns:</strong>String NSPaymentTerm tooltip description.<p></p>\n<pre><code>NSPaymentTerm thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPaymentTerm thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPaymentTerm.GetValue()
-  commentId: M:CRMScript.NetServer.NSPaymentTerm.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSPaymentTerm.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSPaymentTerm.GetValue()
-  fullName: CRMScript.NetServer.NSPaymentTerm.GetValue()
-  type: Method
-  summary: "\nGets the name of the NSPaymentTerm.<p></p>\n<strong>Returns:</strong>String NSPaymentTerm name.<p></p>\n<pre><code>NSPaymentTerm thing;\nString name = thing.GetValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPaymentTerm thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPaymentTerm.#ctor
   commentId: M:CRMScript.NetServer.NSPaymentTerm.#ctor
   id: '#ctor'
@@ -94,6 +34,66 @@ items:
   syntax: 
     content: NSPaymentTerm
   example: 
+- uid: CRMScript.NetServer.NSPaymentTerm.GetId()
+  commentId: M:CRMScript.NetServer.NSPaymentTerm.GetId()
+  id: 'GetId()'
+  so.intellisense: NSPaymentTerm.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSPaymentTerm.GetId()
+  fullName: CRMScript.NetServer.NSPaymentTerm.GetId()
+  type: Method
+  summary: "\nGets the primary key (ID) for the NSPaymentTerm\n"
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: NSPaymentTerm ID
+  example: 
+  - "\n<pre><code>NSPaymentTerm thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPaymentTerm.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSPaymentTerm.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSPaymentTerm.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSPaymentTerm.GetTooltip()
+  fullName: CRMScript.NetServer.NSPaymentTerm.GetTooltip()
+  type: Method
+  summary: "\nGets the tooltip description for the NSPaymentTerm list item.\n"
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSPaymentTerm tooltip description
+  example: 
+  - "\n<pre><code>NSPaymentTerm thing;\nString descr = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPaymentTerm.GetValue()
+  commentId: M:CRMScript.NetServer.NSPaymentTerm.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSPaymentTerm.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSPaymentTerm.GetValue()
+  fullName: CRMScript.NetServer.NSPaymentTerm.GetValue()
+  type: Method
+  summary: "\nGets the name of the NSPaymentTerm.\n"
+  remarks: 
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSPaymentTerm name
+  example: 
+  - "\n<pre><code>NSPaymentTerm thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPaymentTerm.SetId(Integer)
   commentId: M:CRMScript.NetServer.NSPaymentTerm.SetId(Integer)
   id: 'SetId(Integer)'
