--- a/docs/api-reference/CRMScript.NetServer.NSPaymentType.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPaymentType.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSPaymentType.#ctor
   - CRMScript.NetServer.NSPaymentType.GetId()
   - CRMScript.NetServer.NSPaymentType.GetTooltip()
   - CRMScript.NetServer.NSPaymentType.GetValue()
-  - CRMScript.NetServer.NSPaymentType.#ctor
   - CRMScript.NetServer.NSPaymentType.SetId(Integer)
   - CRMScript.NetServer.NSPaymentType.SetTooltip(String)
   - CRMScript.NetServer.NSPaymentType.SetValue(String)
@@ -19,66 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSPaymentType.GetId()
-  commentId: M:CRMScript.NetServer.NSPaymentType.GetId()
-  id: 'GetId()'
-  so.intellisense: NSPaymentType.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSPaymentType.GetId()
-  fullName: CRMScript.NetServer.NSPaymentType.GetId()
-  type: Method
-  summary: "\nGets the primary key (ID) for the NSPaymentType<p></p>\n<strong>Returns:</strong>Integer NSPaymentType id.<p></p>\n<pre><code>NSPaymentType thing;\nInteger id = thing.GetId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSPaymentType thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPaymentType.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSPaymentType.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSPaymentType.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSPaymentType.GetTooltip()
-  fullName: CRMScript.NetServer.NSPaymentType.GetTooltip()
-  type: Method
-  summary: "\nGets the tooltip description for the NSPaymentType list item.<p></p>\n<strong>Returns:</strong>String NSPaymentType tooltip description.<p></p>\n<pre><code>NSPaymentType thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPaymentType thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPaymentType.GetValue()
-  commentId: M:CRMScript.NetServer.NSPaymentType.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSPaymentType.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSPaymentType.GetValue()
-  fullName: CRMScript.NetServer.NSPaymentType.GetValue()
-  type: Method
-  summary: "\nGets the name of the NSPaymentType.<p></p>\n<strong>Returns:</strong>String NSPaymentType name.<p></p>\n<pre><code>NSPaymentType thing;\nString name = thing.GetValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPaymentType thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPaymentType.#ctor
   commentId: M:CRMScript.NetServer.NSPaymentType.#ctor
   id: '#ctor'
@@ -94,6 +34,66 @@ items:
   syntax: 
     content: NSPaymentType
   example: 
+- uid: CRMScript.NetServer.NSPaymentType.GetId()
+  commentId: M:CRMScript.NetServer.NSPaymentType.GetId()
+  id: 'GetId()'
+  so.intellisense: NSPaymentType.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSPaymentType.GetId()
+  fullName: CRMScript.NetServer.NSPaymentType.GetId()
+  type: Method
+  summary: "\nGets the primary key (ID) for the NSPaymentType\n"
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: NSPaymentType ID
+  example: 
+  - "\n<pre><code>NSPaymentType thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPaymentType.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSPaymentType.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSPaymentType.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSPaymentType.GetTooltip()
+  fullName: CRMScript.NetServer.NSPaymentType.GetTooltip()
+  type: Method
+  summary: "\nGets the tooltip description for the NSPaymentType list item.\n"
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSPaymentType tooltip description
+  example: 
+  - "\n<pre><code>NSPaymentType thing;\nString descr = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPaymentType.GetValue()
+  commentId: M:CRMScript.NetServer.NSPaymentType.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSPaymentType.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSPaymentType.GetValue()
+  fullName: CRMScript.NetServer.NSPaymentType.GetValue()
+  type: Method
+  summary: "\nGets the name of the NSPaymentType.\n"
+  remarks: 
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSPaymentType name
+  example: 
+  - "\n<pre><code>NSPaymentType thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPaymentType.SetId(Integer)
   commentId: M:CRMScript.NetServer.NSPaymentType.SetId(Integer)
   id: 'SetId(Integer)'
