--- a/docs/api-reference/CRMScript.NetServer.NSPerson.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPerson.yml
@@ -243,7 +243,7 @@ items:
   nameWithType: NSPerson.GetContactFax()
   fullName: CRMScript.NetServer.NSPerson.GetContactFax()
   type: Method
-  summary: "\nActual phone number as eneterd by the user\n"
+  summary: "\nActual phone number as entered by the user\n"
   remarks: 
   syntax: 
     content: String GetContactFax()
@@ -643,7 +643,7 @@ items:
   nameWithType: NSPerson.GetMrmrs()
   fullName: CRMScript.NetServer.NSPerson.GetMrmrs()
   type: Method
-  summary: "\ne.g. Mrs   sex_title\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetMrmrs()
@@ -1072,7 +1072,7 @@ items:
   nameWithType: NSPerson.SetContactFax(String)
   fullName: CRMScript.NetServer.NSPerson.SetContactFax(String)
   type: Method
-  summary: "\nActual phone number as eneterd by the user\n"
+  summary: "\nActual phone number as entered by the user\n"
   remarks: 
   syntax: 
     content: Void SetContactFax(String contactFax)
@@ -1512,7 +1512,7 @@ items:
   nameWithType: NSPerson.SetMrmrs(String)
   fullName: CRMScript.NetServer.NSPerson.SetMrmrs(String)
   type: Method
-  summary: "\ne.g. Mrs   sex_title\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetMrmrs(String mrmrs)
