--- a/docs/api-reference/CRMScript.NetServer.NSPhoneListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPhoneListItem.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSPhoneListItem.#ctor
   - CRMScript.NetServer.NSPhoneListItem.GetId()
   - CRMScript.NetServer.NSPhoneListItem.GetName()
   - CRMScript.NetServer.NSPhoneListItem.GetPersonCellPhone()
@@ -16,7 +17,6 @@ items:
   - CRMScript.NetServer.NSPhoneListItem.GetPersonPrivatePhone()
   - CRMScript.NetServer.NSPhoneListItem.GetTooltip()
   - CRMScript.NetServer.NSPhoneListItem.GetUniqueId()
-  - CRMScript.NetServer.NSPhoneListItem.#ctor
   - CRMScript.NetServer.NSPhoneListItem.SetId(Integer)
   - CRMScript.NetServer.NSPhoneListItem.SetName(String)
   - CRMScript.NetServer.NSPhoneListItem.SetPersonCellPhone(String)
@@ -33,6 +33,21 @@ items:
   type: Class
   summary: 
   example: 
+- uid: CRMScript.NetServer.NSPhoneListItem.#ctor
+  commentId: M:CRMScript.NetServer.NSPhoneListItem.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSPhoneListItem
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSPhoneListItem.#ctor
+  fullName: CRMScript.NetServer.NSPhoneListItem.#ctor
+  type: Constructor
+  summary: 
+  remarks: 
+  syntax: 
+    content: NSPhoneListItem
+  example: 
 - uid: CRMScript.NetServer.NSPhoneListItem.GetId()
   commentId: M:CRMScript.NetServer.NSPhoneListItem.GetId()
   id: 'GetId()'
@@ -43,14 +58,14 @@ items:
   nameWithType: NSPhoneListItem.GetId()
   fullName: CRMScript.NetServer.NSPhoneListItem.GetId()
   type: Method
-  summary: "\nThe contact or person's ID\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: The contact or person's ID
   example: 
   - "\n<pre><code>NSPhoneListItem thing;\nInteger id = thing.GetId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPhoneListItem.GetName()
@@ -63,14 +78,14 @@ items:
   nameWithType: NSPhoneListItem.GetName()
   fullName: CRMScript.NetServer.NSPhoneListItem.GetName()
   type: Method
-  summary: "\nThe contact or person's name\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetName()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: The contact or person's name
   example: 
   - "\n<pre><code>NSPhoneListItem thing;\nString name = thing.GetName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPhoneListItem.GetPersonCellPhone()
@@ -83,14 +98,14 @@ items:
   nameWithType: NSPhoneListItem.GetPersonCellPhone()
   fullName: CRMScript.NetServer.NSPhoneListItem.GetPersonCellPhone()
   type: Method
-  summary: "\nPerson Cell Phone\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetPersonCellPhone()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: Person Cell Phone
   example: 
   - "\n<pre><code>NSPhoneListItem thing;\nString personCellPhone = thing.GetPersonCellPhone();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPhoneListItem.GetPersonDirectPhone()
@@ -103,14 +118,14 @@ items:
   nameWithType: NSPhoneListItem.GetPersonDirectPhone()
   fullName: CRMScript.NetServer.NSPhoneListItem.GetPersonDirectPhone()
   type: Method
-  summary: "\nPerson Direct Phone\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetPersonDirectPhone()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: Person Direct Phone
   example: 
   - "\n<pre><code>NSPhoneListItem thing;\nString personDirectPhone = thing.GetPersonDirectPhone();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPhoneListItem.GetPersonEmail()
@@ -123,14 +138,14 @@ items:
   nameWithType: NSPhoneListItem.GetPersonEmail()
   fullName: CRMScript.NetServer.NSPhoneListItem.GetPersonEmail()
   type: Method
-  summary: "\nThe address itself\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetPersonEmail()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: The address itself
   example: 
   - "\n<pre><code>NSPhoneListItem thing;\nString personEmail = thing.GetPersonEmail();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPhoneListItem.GetPersonFaxNumber()
@@ -143,14 +158,14 @@ items:
   nameWithType: NSPhoneListItem.GetPersonFaxNumber()
   fullName: CRMScript.NetServer.NSPhoneListItem.GetPersonFaxNumber()
   type: Method
-  summary: "\nActual phone number as eneterd by the user\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetPersonFaxNumber()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: Actual phone number as entered by the user
   example: 
   - "\n<pre><code>NSPhoneListItem thing;\nString personFaxNumber = thing.GetPersonFaxNumber();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPhoneListItem.GetPersonPagerNumber()
@@ -163,14 +178,14 @@ items:
   nameWithType: NSPhoneListItem.GetPersonPagerNumber()
   fullName: CRMScript.NetServer.NSPhoneListItem.GetPersonPagerNumber()
   type: Method
-  summary: "\nActual phone number as eneterd by the user\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetPersonPagerNumber()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: Actual phone number as entered by the user
   example: 
   - "\n<pre><code>NSPhoneListItem thing;\nString personPagerNumber = thing.GetPersonPagerNumber();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPhoneListItem.GetPersonPrivatePhone()
@@ -183,14 +198,14 @@ items:
   nameWithType: NSPhoneListItem.GetPersonPrivatePhone()
   fullName: CRMScript.NetServer.NSPhoneListItem.GetPersonPrivatePhone()
   type: Method
-  summary: "\nPerson Private Phone\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetPersonPrivatePhone()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: Person Private Phone
   example: 
   - "\n<pre><code>NSPhoneListItem thing;\nString personPrivatePhone = thing.GetPersonPrivatePhone();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPhoneListItem.GetTooltip()
@@ -223,31 +238,16 @@ items:
   nameWithType: NSPhoneListItem.GetUniqueId()
   fullName: CRMScript.NetServer.NSPhoneListItem.GetUniqueId()
   type: Method
-  summary: "\nProperty setting a unique id indicating if this is a person or contact\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetUniqueId()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: Property setting a unique id indicating if this is a person or contact
   example: 
   - "\n<pre><code>NSPhoneListItem thing;\nString uniqueId = thing.GetUniqueId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPhoneListItem.#ctor
-  commentId: M:CRMScript.NetServer.NSPhoneListItem.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSPhoneListItem
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSPhoneListItem.#ctor
-  fullName: CRMScript.NetServer.NSPhoneListItem.#ctor
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: NSPhoneListItem
-  example: 
 - uid: CRMScript.NetServer.NSPhoneListItem.SetId(Integer)
   commentId: M:CRMScript.NetServer.NSPhoneListItem.SetId(Integer)
   id: 'SetId(Integer)'
@@ -258,14 +258,14 @@ items:
   nameWithType: NSPhoneListItem.SetId(Integer)
   fullName: CRMScript.NetServer.NSPhoneListItem.SetId(Integer)
   type: Method
-  summary: "\nThe contact or person's ID\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetId(Integer id)
     parameters:
     - id: id
       type: CRMScript.Global.Integer
-      description: 
+      description: The contact or person's ID
     return:
       type: CRMScript.Global.Void
   example: 
@@ -280,14 +280,14 @@ items:
   nameWithType: NSPhoneListItem.SetName(String)
   fullName: CRMScript.NetServer.NSPhoneListItem.SetName(String)
   type: Method
-  summary: "\nThe contact or person's name\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The contact or person's name
     return:
       type: CRMScript.Global.Void
   example: 
@@ -302,14 +302,14 @@ items:
   nameWithType: NSPhoneListItem.SetPersonCellPhone(String)
   fullName: CRMScript.NetServer.NSPhoneListItem.SetPersonCellPhone(String)
   type: Method
-  summary: "\nPerson Cell Phone\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonCellPhone(String personCellPhone)
     parameters:
     - id: personCellPhone
       type: CRMScript.Global.String
-      description: 
+      description: Person Cell Phone
     return:
       type: CRMScript.Global.Void
   example: 
@@ -324,14 +324,14 @@ items:
   nameWithType: NSPhoneListItem.SetPersonDirectPhone(String)
   fullName: CRMScript.NetServer.NSPhoneListItem.SetPersonDirectPhone(String)
   type: Method
-  summary: "\nPerson Direct Phone\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonDirectPhone(String personDirectPhone)
     parameters:
     - id: personDirectPhone
       type: CRMScript.Global.String
-      description: 
+      description: Person Direct Phone
     return:
       type: CRMScript.Global.Void
   example: 
@@ -346,14 +346,14 @@ items:
   nameWithType: NSPhoneListItem.SetPersonEmail(String)
   fullName: CRMScript.NetServer.NSPhoneListItem.SetPersonEmail(String)
   type: Method
-  summary: "\nThe address itself\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonEmail(String personEmail)
     parameters:
     - id: personEmail
       type: CRMScript.Global.String
-      description: 
+      description: The address itself
     return:
       type: CRMScript.Global.Void
   example: 
@@ -368,14 +368,14 @@ items:
   nameWithType: NSPhoneListItem.SetPersonFaxNumber(String)
   fullName: CRMScript.NetServer.NSPhoneListItem.SetPersonFaxNumber(String)
   type: Method
-  summary: "\nActual phone number as eneterd by the user\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonFaxNumber(String personFaxNumber)
     parameters:
     - id: personFaxNumber
       type: CRMScript.Global.String
-      description: 
+      description: Actual phone number as entered by the user
     return:
       type: CRMScript.Global.Void
   example: 
@@ -390,14 +390,14 @@ items:
   nameWithType: NSPhoneListItem.SetPersonPagerNumber(String)
   fullName: CRMScript.NetServer.NSPhoneListItem.SetPersonPagerNumber(String)
   type: Method
-  summary: "\nActual phone number as eneterd by the user\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonPagerNumber(String personPagerNumber)
     parameters:
     - id: personPagerNumber
       type: CRMScript.Global.String
-      description: 
+      description: Actual phone number as entered by the user
     return:
       type: CRMScript.Global.Void
   example: 
@@ -412,14 +412,14 @@ items:
   nameWithType: NSPhoneListItem.SetPersonPrivatePhone(String)
   fullName: CRMScript.NetServer.NSPhoneListItem.SetPersonPrivatePhone(String)
   type: Method
-  summary: "\nPerson Private Phone\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonPrivatePhone(String personPrivatePhone)
     parameters:
     - id: personPrivatePhone
       type: CRMScript.Global.String
-      description: 
+      description: Person Private Phone
     return:
       type: CRMScript.Global.Void
   example: 
@@ -456,14 +456,14 @@ items:
   nameWithType: NSPhoneListItem.SetUniqueId(String)
   fullName: CRMScript.NetServer.NSPhoneListItem.SetUniqueId(String)
   type: Method
-  summary: "\nProperty setting a unique id indicating if this is a person or contact\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUniqueId(String uniqueId)
     parameters:
     - id: uniqueId
       type: CRMScript.Global.String
-      description: 
+      description: Property setting a unique id indicating if this is a person or contact
     return:
       type: CRMScript.Global.Void
   example: 
