--- a/docs/api-reference/CRMScript.NetServer.NSPluginUrlResponse.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPluginUrlResponse.yml
@@ -6,14 +6,14 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSPluginUrlResponse.#ctor
   - CRMScript.NetServer.NSPluginUrlResponse.GetChanges()
   - CRMScript.NetServer.NSPluginUrlResponse.GetErrorCode()
   - CRMScript.NetServer.NSPluginUrlResponse.GetIsOk()
   - CRMScript.NetServer.NSPluginUrlResponse.GetTechExplanation()
   - CRMScript.NetServer.NSPluginUrlResponse.GetUrl()
   - CRMScript.NetServer.NSPluginUrlResponse.GetUserExplanation()
-  - CRMScript.NetServer.NSPluginUrlResponse.#ctor
-  - CRMScript.NetServer.NSPluginUrlResponse.SetChanges()
+  - CRMScript.NetServer.NSPluginUrlResponse.SetChanges(NSChangedData)
   - CRMScript.NetServer.NSPluginUrlResponse.SetErrorCode(String)
   - CRMScript.NetServer.NSPluginUrlResponse.SetIsOk(Bool)
   - CRMScript.NetServer.NSPluginUrlResponse.SetTechExplanation(String)
@@ -25,125 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSPluginUrlResponse.GetChanges()
-  commentId: M:CRMScript.NetServer.NSPluginUrlResponse.GetChanges()
-  id: 'GetChanges()'
-  so.intellisense: NSPluginUrlResponse.GetChanges
-  langs:
-  - crmscript
-  name: 'GetChanges()'
-  nameWithType: NSPluginUrlResponse.GetChanges()
-  fullName: CRMScript.NetServer.NSPluginUrlResponse.GetChanges()
-  type: Method
-  summary: "\nTablename/recordid of data changed by this method, that the client may need to reload\n"
-  remarks: 
-  syntax: 
-    content: NSChangedData GetChanges()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSChangedData
-  example: 
-  - "\n<pre><code>NSPluginUrlResponse thing;\nNSChangedData changes = thing.GetChanges();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPluginUrlResponse.GetErrorCode()
-  commentId: M:CRMScript.NetServer.NSPluginUrlResponse.GetErrorCode()
-  id: 'GetErrorCode()'
-  so.intellisense: NSPluginUrlResponse.GetErrorCode
-  langs:
-  - crmscript
-  name: 'GetErrorCode()'
-  nameWithType: NSPluginUrlResponse.GetErrorCode()
-  fullName: CRMScript.NetServer.NSPluginUrlResponse.GetErrorCode()
-  type: Method
-  summary: "\nAn error code, if available.\n"
-  remarks: 
-  syntax: 
-    content: String GetErrorCode()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPluginUrlResponse thing;\nString errorCode = thing.GetErrorCode();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPluginUrlResponse.GetIsOk()
-  commentId: M:CRMScript.NetServer.NSPluginUrlResponse.GetIsOk()
-  id: 'GetIsOk()'
-  so.intellisense: NSPluginUrlResponse.GetIsOk
-  langs:
-  - crmscript
-  name: 'GetIsOk()'
-  nameWithType: NSPluginUrlResponse.GetIsOk()
-  fullName: CRMScript.NetServer.NSPluginUrlResponse.GetIsOk()
-  type: Method
-  summary: "\nAnswer to the question / An indication if the operation went well.\n"
-  remarks: 
-  syntax: 
-    content: Bool GetIsOk()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSPluginUrlResponse thing;\nBool isOk = thing.GetIsOk();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPluginUrlResponse.GetTechExplanation()
-  commentId: M:CRMScript.NetServer.NSPluginUrlResponse.GetTechExplanation()
-  id: 'GetTechExplanation()'
-  so.intellisense: NSPluginUrlResponse.GetTechExplanation
-  langs:
-  - crmscript
-  name: 'GetTechExplanation()'
-  nameWithType: NSPluginUrlResponse.GetTechExplanation()
-  fullName: CRMScript.NetServer.NSPluginUrlResponse.GetTechExplanation()
-  type: Method
-  summary: "\nAlways in English\n"
-  remarks: 
-  syntax: 
-    content: String GetTechExplanation()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPluginUrlResponse thing;\nString techExplanation = thing.GetTechExplanation();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPluginUrlResponse.GetUrl()
-  commentId: M:CRMScript.NetServer.NSPluginUrlResponse.GetUrl()
-  id: 'GetUrl()'
-  so.intellisense: NSPluginUrlResponse.GetUrl
-  langs:
-  - crmscript
-  name: 'GetUrl()'
-  nameWithType: NSPluginUrlResponse.GetUrl()
-  fullName: CRMScript.NetServer.NSPluginUrlResponse.GetUrl()
-  type: Method
-  summary: "\nUrl that the GUI should navigato to/open, if non-blank. The GUI cannot enforce any rules subsequent to opening the requested url.\n"
-  remarks: 
-  syntax: 
-    content: String GetUrl()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPluginUrlResponse thing;\nString url = thing.GetUrl();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPluginUrlResponse.GetUserExplanation()
-  commentId: M:CRMScript.NetServer.NSPluginUrlResponse.GetUserExplanation()
-  id: 'GetUserExplanation()'
-  so.intellisense: NSPluginUrlResponse.GetUserExplanation
-  langs:
-  - crmscript
-  name: 'GetUserExplanation()'
-  nameWithType: NSPluginUrlResponse.GetUserExplanation()
-  fullName: CRMScript.NetServer.NSPluginUrlResponse.GetUserExplanation()
-  type: Method
-  summary: "\nA localized explanation to the answer.\n"
-  remarks: 
-  syntax: 
-    content: String GetUserExplanation()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPluginUrlResponse thing;\nString userExplanation = thing.GetUserExplanation();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPluginUrlResponse.#ctor
   commentId: M:CRMScript.NetServer.NSPluginUrlResponse.#ctor
   id: '#ctor'
@@ -159,21 +40,146 @@ items:
   syntax: 
     content: NSPluginUrlResponse
   example: 
-- uid: CRMScript.NetServer.NSPluginUrlResponse.SetChanges()
-  commentId: M:CRMScript.NetServer.NSPluginUrlResponse.SetChanges()
-  id: 'SetChanges()'
+- uid: CRMScript.NetServer.NSPluginUrlResponse.GetChanges()
+  commentId: M:CRMScript.NetServer.NSPluginUrlResponse.GetChanges()
+  id: 'GetChanges()'
+  so.intellisense: NSPluginUrlResponse.GetChanges
+  langs:
+  - crmscript
+  name: 'GetChanges()'
+  nameWithType: NSPluginUrlResponse.GetChanges()
+  fullName: CRMScript.NetServer.NSPluginUrlResponse.GetChanges()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSChangedData GetChanges()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSChangedData
+      description: Tablename/recordid of data changed by this method, that the client may need to reload
+  example: 
+  - "\n<pre><code>NSPluginUrlResponse thing;\nNSChangedData changes = thing.GetChanges();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPluginUrlResponse.GetErrorCode()
+  commentId: M:CRMScript.NetServer.NSPluginUrlResponse.GetErrorCode()
+  id: 'GetErrorCode()'
+  so.intellisense: NSPluginUrlResponse.GetErrorCode
+  langs:
+  - crmscript
+  name: 'GetErrorCode()'
+  nameWithType: NSPluginUrlResponse.GetErrorCode()
+  fullName: CRMScript.NetServer.NSPluginUrlResponse.GetErrorCode()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetErrorCode()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: An error code, if available.
+  example: 
+  - "\n<pre><code>NSPluginUrlResponse thing;\nString errorCode = thing.GetErrorCode();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPluginUrlResponse.GetIsOk()
+  commentId: M:CRMScript.NetServer.NSPluginUrlResponse.GetIsOk()
+  id: 'GetIsOk()'
+  so.intellisense: NSPluginUrlResponse.GetIsOk
+  langs:
+  - crmscript
+  name: 'GetIsOk()'
+  nameWithType: NSPluginUrlResponse.GetIsOk()
+  fullName: CRMScript.NetServer.NSPluginUrlResponse.GetIsOk()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetIsOk()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Answer to the question / An indication if the operation went well.
+  example: 
+  - "\n<pre><code>NSPluginUrlResponse thing;\nBool isOk = thing.GetIsOk();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPluginUrlResponse.GetTechExplanation()
+  commentId: M:CRMScript.NetServer.NSPluginUrlResponse.GetTechExplanation()
+  id: 'GetTechExplanation()'
+  so.intellisense: NSPluginUrlResponse.GetTechExplanation
+  langs:
+  - crmscript
+  name: 'GetTechExplanation()'
+  nameWithType: NSPluginUrlResponse.GetTechExplanation()
+  fullName: CRMScript.NetServer.NSPluginUrlResponse.GetTechExplanation()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetTechExplanation()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Always in English
+  example: 
+  - "\n<pre><code>NSPluginUrlResponse thing;\nString techExplanation = thing.GetTechExplanation();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPluginUrlResponse.GetUrl()
+  commentId: M:CRMScript.NetServer.NSPluginUrlResponse.GetUrl()
+  id: 'GetUrl()'
+  so.intellisense: NSPluginUrlResponse.GetUrl
+  langs:
+  - crmscript
+  name: 'GetUrl()'
+  nameWithType: NSPluginUrlResponse.GetUrl()
+  fullName: CRMScript.NetServer.NSPluginUrlResponse.GetUrl()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetUrl()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: URL that the GUI should navigate to/open, if non-blank. The GUI cannot enforce any rules subsequent to opening the requested URL.
+  example: 
+  - "\n<pre><code>NSPluginUrlResponse thing;\nString url = thing.GetUrl();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPluginUrlResponse.GetUserExplanation()
+  commentId: M:CRMScript.NetServer.NSPluginUrlResponse.GetUserExplanation()
+  id: 'GetUserExplanation()'
+  so.intellisense: NSPluginUrlResponse.GetUserExplanation
+  langs:
+  - crmscript
+  name: 'GetUserExplanation()'
+  nameWithType: NSPluginUrlResponse.GetUserExplanation()
+  fullName: CRMScript.NetServer.NSPluginUrlResponse.GetUserExplanation()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetUserExplanation()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: A localized explanation to the answer.
+  example: 
+  - "\n<pre><code>NSPluginUrlResponse thing;\nString userExplanation = thing.GetUserExplanation();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPluginUrlResponse.SetChanges(NSChangedData)
+  commentId: M:CRMScript.NetServer.NSPluginUrlResponse.SetChanges(NSChangedData)
+  id: 'SetChanges(NSChangedData)'
   so.intellisense: NSPluginUrlResponse.SetChanges
   langs:
   - crmscript
-  name: 'SetChanges()'
-  nameWithType: NSPluginUrlResponse.SetChanges()
-  fullName: CRMScript.NetServer.NSPluginUrlResponse.SetChanges()
+  name: 'SetChanges(NSChangedData)'
+  nameWithType: NSPluginUrlResponse.SetChanges(NSChangedData)
+  fullName: CRMScript.NetServer.NSPluginUrlResponse.SetChanges(NSChangedData)
   type: Method
-  summary: "\nTablename/recordid of data changed by this method, that the client may need to reload\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetChanges(NSChangedData changes)
     parameters:
+    - id: changes
+      type: CRMScript.NetServer.NSChangedData
+      description: Table name/record ID of data changed by this method, that the client may need to reload
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSPluginUrlResponse thing;\nNSChangedData changes;\nthing.SetChanges(changes);</code></pre>\n"
 - uid: CRMScript.NetServer.NSPluginUrlResponse.SetErrorCode(String)
@@ -186,14 +192,14 @@ items:
   nameWithType: NSPluginUrlResponse.SetErrorCode(String)
   fullName: CRMScript.NetServer.NSPluginUrlResponse.SetErrorCode(String)
   type: Method
-  summary: "\nAn error code, if available.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetErrorCode(String errorCode)
     parameters:
     - id: errorCode
       type: CRMScript.Global.String
-      description: 
+      description: An error code, if available.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -208,14 +214,14 @@ items:
   nameWithType: NSPluginUrlResponse.SetIsOk(Bool)
   fullName: CRMScript.NetServer.NSPluginUrlResponse.SetIsOk(Bool)
   type: Method
-  summary: "\nAnswer to the question / An indication if the operation went well.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsOk(Bool isOk)
     parameters:
     - id: isOk
       type: CRMScript.Global.Bool
-      description: 
+      description: Answer to the question / An indication if the operation went well.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -230,14 +236,14 @@ items:
   nameWithType: NSPluginUrlResponse.SetTechExplanation(String)
   fullName: CRMScript.NetServer.NSPluginUrlResponse.SetTechExplanation(String)
   type: Method
-  summary: "\nAlways in English\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTechExplanation(String techExplanation)
     parameters:
     - id: techExplanation
       type: CRMScript.Global.String
-      description: 
+      description: Always in English
     return:
       type: CRMScript.Global.Void
   example: 
@@ -252,14 +258,14 @@ items:
   nameWithType: NSPluginUrlResponse.SetUrl(String)
   fullName: CRMScript.NetServer.NSPluginUrlResponse.SetUrl(String)
   type: Method
-  summary: "\nUrl that the GUI should navigato to/open, if non-blank. The GUI cannot enforce any rules subsequent to opening the requested url.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUrl(String url)
     parameters:
     - id: url
       type: CRMScript.Global.String
-      description: 
+      description: URL that the GUI should navigate to/open, if non-blank. The GUI cannot enforce any rules subsequent to opening the requested URL.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -274,14 +280,14 @@ items:
   nameWithType: NSPluginUrlResponse.SetUserExplanation(String)
   fullName: CRMScript.NetServer.NSPluginUrlResponse.SetUserExplanation(String)
   type: Method
-  summary: "\nA localized explanation to the answer.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUserExplanation(String userExplanation)
     parameters:
     - id: userExplanation
       type: CRMScript.Global.String
-      description: 
+      description: A localized explanation to the answer.
     return:
       type: CRMScript.Global.Void
   example: 
