--- a/docs/api-reference/CRMScript.NetServer.NSPosition.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPosition.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSPosition.#ctor
   - CRMScript.NetServer.NSPosition.GetId()
   - CRMScript.NetServer.NSPosition.GetTooltip()
   - CRMScript.NetServer.NSPosition.GetValue()
-  - CRMScript.NetServer.NSPosition.#ctor
   - CRMScript.NetServer.NSPosition.SetId(Integer)
   - CRMScript.NetServer.NSPosition.SetTooltip(String)
   - CRMScript.NetServer.NSPosition.SetValue(String)
@@ -19,66 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSPosition.GetId()
-  commentId: M:CRMScript.NetServer.NSPosition.GetId()
-  id: 'GetId()'
-  so.intellisense: NSPosition.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSPosition.GetId()
-  fullName: CRMScript.NetServer.NSPosition.GetId()
-  type: Method
-  summary: "\nGets the primary key (ID) for the NSPosition<p></p>\n<strong>Returns:</strong>Integer NSPosition id.<p></p>\n<pre><code>NSPosition thing;\nInteger id = thing.GetId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSPosition thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPosition.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSPosition.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSPosition.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSPosition.GetTooltip()
-  fullName: CRMScript.NetServer.NSPosition.GetTooltip()
-  type: Method
-  summary: "\nGets the tooltip description for the NSPosition list item.<p></p>\n<strong>Returns:</strong>String NSPosition tooltip description.<p></p>\n<pre><code>NSPosition thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPosition thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPosition.GetValue()
-  commentId: M:CRMScript.NetServer.NSPosition.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSPosition.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSPosition.GetValue()
-  fullName: CRMScript.NetServer.NSPosition.GetValue()
-  type: Method
-  summary: "\nGets the name of the NSPosition.<p></p>\n<strong>Returns:</strong>String NSPosition name.<p></p>\n<pre><code>NSPosition thing;\nString name = thing.GetValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPosition thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPosition.#ctor
   commentId: M:CRMScript.NetServer.NSPosition.#ctor
   id: '#ctor'
@@ -94,6 +34,66 @@ items:
   syntax: 
     content: NSPosition
   example: 
+- uid: CRMScript.NetServer.NSPosition.GetId()
+  commentId: M:CRMScript.NetServer.NSPosition.GetId()
+  id: 'GetId()'
+  so.intellisense: NSPosition.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSPosition.GetId()
+  fullName: CRMScript.NetServer.NSPosition.GetId()
+  type: Method
+  summary: "\nGets the primary key (ID) for the NSPosition\n"
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: NSPosition ID
+  example: 
+  - "\n<pre><code>NSPosition thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPosition.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSPosition.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSPosition.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSPosition.GetTooltip()
+  fullName: CRMScript.NetServer.NSPosition.GetTooltip()
+  type: Method
+  summary: "\nGets the tooltip description for the NSPosition list item.\n"
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSPosition tooltip description
+  example: 
+  - "\n<pre><code>NSPosition thing;\nString descr = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPosition.GetValue()
+  commentId: M:CRMScript.NetServer.NSPosition.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSPosition.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSPosition.GetValue()
+  fullName: CRMScript.NetServer.NSPosition.GetValue()
+  type: Method
+  summary: "\nGets the name of the NSPosition.\n"
+  remarks: 
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSPosition name
+  example: 
+  - "\n<pre><code>NSPosition thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPosition.SetId(Integer)
   commentId: M:CRMScript.NetServer.NSPosition.SetId(Integer)
   id: 'SetId(Integer)'
