--- a/docs/api-reference/CRMScript.NetServer.NSProjectAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectAgent.yml
@@ -368,7 +368,7 @@ items:
   nameWithType: NSProjectAgent.GetMyProjectEvents()
   fullName: CRMScript.NetServer.NSProjectAgent.GetMyProjectEvents()
   type: Method
-  summary: "\nGets all project events that belongs to the currently logged on user. The list of events are filtered by the Audience Visibility restrictions set when the project event is created.<p></p>\n<strong>Returns:</strong>NSProjectEvent[]<p></p>\n<pre><code>NSProjectAgent agent;\nNSProjectEvent[] res = agent.GetMyProjectEvents();</code></pre>\n"
+  summary: "\nGets all project events that belongs to the currently logged-on user. The list of events are filtered by the Audience Visibility restrictions set when the project event is created.<p></p>\n<strong>Returns:</strong>NSProjectEvent[]<p></p>\n<pre><code>NSProjectAgent agent;\nNSProjectEvent[] res = agent.GetMyProjectEvents();</code></pre>\n"
   remarks: 
   syntax: 
     content: NSProjectEvent[] GetMyProjectEvents()
