--- a/docs/api-reference/CRMScript.NetServer.NSProjectEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectEntity.yml
@@ -654,7 +654,7 @@ items:
   nameWithType: NSProjectEntity.GetUrls()
   fullName: CRMScript.NetServer.NSProjectEntity.GetUrls()
   type: Method
-  summary: "\nThe project's internet adresses<p></p>\n<strong>Returns:</strong>NSEntityElement[]<p></p>\n<pre><code>NSProjectEntity thing;\nNSEntityElement[] urls = thing.GetUrls();</code></pre>\n"
+  summary: "\nThe project's internet addresses<p></p>\n<strong>Returns:</strong>NSEntityElement[]<p></p>\n<pre><code>NSProjectEntity thing;\nNSEntityElement[] urls = thing.GetUrls();</code></pre>\n"
   remarks: 
   syntax: 
     content: NSEntityElement[] GetUrls()
@@ -1274,7 +1274,7 @@ items:
   nameWithType: NSProjectEntity.SetUrls(NSEntityElement[])
   fullName: CRMScript.NetServer.NSProjectEntity.SetUrls(NSEntityElement[])
   type: Method
-  summary: "\nThe project's internet adresses\n"
+  summary: "\nThe project's internet addresses\n"
   remarks: 
   syntax: 
     content: Void SetUrls(NSEntityElement[] urls)
