--- a/docs/api-reference/CRMScript.NetServer.NSMailMergeSettings.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMailMergeSettings.yml
@@ -120,7 +120,7 @@ items:
   nameWithType: NSMailMergeSettings.GetAlwaysUseCustomAttention()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetAlwaysUseCustomAttention()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetAlwaysUseCustomAttention()
@@ -140,7 +140,7 @@ items:
   nameWithType: NSMailMergeSettings.GetCustomAttention()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetCustomAttention()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetCustomAttention()
@@ -160,7 +160,7 @@ items:
   nameWithType: NSMailMergeSettings.GetCustomMailBody()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetCustomMailBody()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetCustomMailBody()
@@ -180,7 +180,7 @@ items:
   nameWithType: NSMailMergeSettings.GetCustomMailSubject()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetCustomMailSubject()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetCustomMailSubject()
@@ -200,7 +200,7 @@ items:
   nameWithType: NSMailMergeSettings.GetDocumentId()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetDocumentId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDocumentId()
@@ -220,7 +220,7 @@ items:
   nameWithType: NSMailMergeSettings.GetExtraInfo()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetExtraInfo()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetExtraInfo()
@@ -240,7 +240,7 @@ items:
   nameWithType: NSMailMergeSettings.GetIncludeNoMailingsRecipient()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetIncludeNoMailingsRecipient()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetIncludeNoMailingsRecipient()
@@ -260,7 +260,7 @@ items:
   nameWithType: NSMailMergeSettings.GetIncludeRetiredRecipients()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetIncludeRetiredRecipients()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetIncludeRetiredRecipients()
@@ -300,7 +300,7 @@ items:
   nameWithType: NSMailMergeSettings.GetIsTemporarySelection()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetIsTemporarySelection()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetIsTemporarySelection()
@@ -340,7 +340,7 @@ items:
   nameWithType: NSMailMergeSettings.GetProjectId()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetProjectId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetProjectId()
@@ -360,7 +360,7 @@ items:
   nameWithType: NSMailMergeSettings.GetRemoveCompanyInterest()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetRemoveCompanyInterest()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetRemoveCompanyInterest()
@@ -380,7 +380,7 @@ items:
   nameWithType: NSMailMergeSettings.GetRemovePersonInterest()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetRemovePersonInterest()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetRemovePersonInterest()
@@ -400,7 +400,7 @@ items:
   nameWithType: NSMailMergeSettings.GetSaveDocument()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetSaveDocument()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetSaveDocument()
@@ -420,7 +420,7 @@ items:
   nameWithType: NSMailMergeSettings.GetSelectionId()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetSelectionId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSelectionId()
@@ -460,7 +460,7 @@ items:
   nameWithType: NSMailMergeSettings.GetTaskEntity()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetTaskEntity()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSMailMergeTask GetTaskEntity()
@@ -480,7 +480,7 @@ items:
   nameWithType: NSMailMergeSettings.GetTestOnly()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetTestOnly()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetTestOnly()
@@ -544,7 +544,7 @@ items:
   nameWithType: NSMailMergeSettings.SetAlwaysUseCustomAttention(Bool)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetAlwaysUseCustomAttention(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAlwaysUseCustomAttention(Bool alwaysUseCustomAttention)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSMailMergeSettings.SetCustomAttention(String)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetCustomAttention(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCustomAttention(String customAttention)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSMailMergeSettings.SetCustomMailBody(String)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetCustomMailBody(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCustomMailBody(String customMailBody)
@@ -610,7 +610,7 @@ items:
   nameWithType: NSMailMergeSettings.SetCustomMailSubject(String)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetCustomMailSubject(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCustomMailSubject(String customMailSubject)
@@ -632,7 +632,7 @@ items:
   nameWithType: NSMailMergeSettings.SetDocumentId(Integer)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetDocumentId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDocumentId(Integer documentId)
@@ -654,7 +654,7 @@ items:
   nameWithType: NSMailMergeSettings.SetExtraInfo(String)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetExtraInfo(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetExtraInfo(String extraInfo)
@@ -676,7 +676,7 @@ items:
   nameWithType: NSMailMergeSettings.SetIncludeNoMailingsRecipient(Bool)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetIncludeNoMailingsRecipient(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIncludeNoMailingsRecipient(Bool includeNoMailingsRecipient)
@@ -698,7 +698,7 @@ items:
   nameWithType: NSMailMergeSettings.SetIncludeRetiredRecipients(Bool)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetIncludeRetiredRecipients(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIncludeRetiredRecipients(Bool includeRetiredRecipients)
@@ -720,7 +720,7 @@ items:
   nameWithType: NSMailMergeSettings.SetIncludeStoppedRecipients(Bool)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetIncludeStoppedRecipients(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIncludeStoppedRecipients(Bool includeStoppedRecipients)
@@ -742,7 +742,7 @@ items:
   nameWithType: NSMailMergeSettings.SetIsTemporarySelection(Bool)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetIsTemporarySelection(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsTemporarySelection(Bool isTemporarySelection)
@@ -764,8 +764,8 @@ items:
   nameWithType: NSMailMergeSettings.SetMailMergeDeliveryType(Integer)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetMailMergeDeliveryType(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetMailMergeDeliveryType(Integer mailMergeDeliveryType)
     parameters:
@@ -786,7 +786,7 @@ items:
   nameWithType: NSMailMergeSettings.SetProjectId(Integer)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetProjectId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetProjectId(Integer projectId)
@@ -808,7 +808,7 @@ items:
   nameWithType: NSMailMergeSettings.SetRemoveCompanyInterest(Integer)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetRemoveCompanyInterest(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRemoveCompanyInterest(Integer removeCompanyInterest)
@@ -830,7 +830,7 @@ items:
   nameWithType: NSMailMergeSettings.SetRemovePersonInterest(Integer)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetRemovePersonInterest(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRemovePersonInterest(Integer removePersonInterest)
@@ -852,7 +852,7 @@ items:
   nameWithType: NSMailMergeSettings.SetSaveDocument(Bool)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetSaveDocument(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSaveDocument(Bool saveDocument)
@@ -874,7 +874,7 @@ items:
   nameWithType: NSMailMergeSettings.SetSelectionId(Integer)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetSelectionId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSelectionId(Integer selectionId)
@@ -918,7 +918,7 @@ items:
   nameWithType: NSMailMergeSettings.SetTaskEntity(NSMailMergeSettings)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetTaskEntity(NSMailMergeSettings)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTaskEntity(NSMailMergeTask taskEntity)
@@ -940,7 +940,7 @@ items:
   nameWithType: NSMailMergeSettings.SetTestOnly(Bool)
   fullName: CRMScript.NetServer.NSMailMergeSettings.SetTestOnly(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTestOnly(Bool testOnly)
