--- a/docs/api-reference/CRMScript.NetServer.NSParticipantInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSParticipantInfo.yml
@@ -50,7 +50,7 @@ items:
   nameWithType: NSParticipantInfo.GetAssociateId()
   fullName: CRMScript.NetServer.NSParticipantInfo.GetAssociateId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetAssociateId()
@@ -70,14 +70,14 @@ items:
   nameWithType: NSParticipantInfo.GetContactId()
   fullName: CRMScript.NetServer.NSParticipantInfo.GetContactId()
   type: Method
-  summary: "\nContact ID of the participant if the participant is an associate or person\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetContactId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: Contact ID of the participant if the participant is an associate or person
   example: 
   - "\n<pre><code>NSParticipantInfo thing;\nInteger contactId = thing.GetContactId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSParticipantInfo.GetEmailId()
@@ -90,14 +90,14 @@ items:
   nameWithType: NSParticipantInfo.GetEmailId()
   fullName: CRMScript.NetServer.NSParticipantInfo.GetEmailId()
   type: Method
-  summary: "\nThe email ID of the email belonging to the appointment record belonging to this person\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetEmailId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: The email ID of the email belonging to the appointment record belonging to this person
   example: 
   - "\n<pre><code>NSParticipantInfo thing;\nInteger emailId = thing.GetEmailId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSParticipantInfo.GetInvitationStatus()
@@ -110,14 +110,14 @@ items:
   nameWithType: NSParticipantInfo.GetInvitationStatus()
   fullName: CRMScript.NetServer.NSParticipantInfo.GetInvitationStatus()
   type: Method
-  summary: "\nThe participant status for the appointment<p></p>\n<strong>Returns:</strong>Integer\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetInvitationStatus()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: The participant status for the appointment
   example: 
   - "\n<pre><code>NSParticipantInfo thing;\nInteger invitationStatus = thing.GetInvitationStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSParticipantInfo.GetPersonId()
@@ -130,14 +130,14 @@ items:
   nameWithType: NSParticipantInfo.GetPersonId()
   fullName: CRMScript.NetServer.NSParticipantInfo.GetPersonId()
   type: Method
-  summary: "\nPerson ID of the participant if the participant is a person\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetPersonId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: Person ID of the participant if the participant is a person
   example: 
   - "\n<pre><code>NSParticipantInfo thing;\nInteger personId = thing.GetPersonId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSParticipantInfo.GetSendEmail()
@@ -150,14 +150,14 @@ items:
   nameWithType: NSParticipantInfo.GetSendEmail()
   fullName: CRMScript.NetServer.NSParticipantInfo.GetSendEmail()
   type: Method
-  summary: "\nTrue if the participant has been sent an email or should be sent an email\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetSendEmail()
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description:
+      description: True if the participant has been sent an email or should be sent an email
   example: 
   - "\n<pre><code>NSParticipantInfo thing;\nBool sendEmail = thing.GetSendEmail();</code></pre>\n"
 - uid: CRMScript.NetServer.NSParticipantInfo.SetAssociateId(Integer)
@@ -170,14 +170,14 @@ items:
   nameWithType: NSParticipantInfo.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSParticipantInfo.SetAssociateId(Integer)
   type: Method
-  summary: "\nAssociate ID of the participant if the participant is an associate (or resource)\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
     parameters:
     - id: associateId
       type: CRMScript.Global.Integer
-      description: 
+      description: Associate ID of the participant if the participant is an associate (or resource)
     return:
       type: CRMScript.Global.Void
   example: 
@@ -192,14 +192,14 @@ items:
   nameWithType: NSParticipantInfo.SetContactId(Integer)
   fullName: CRMScript.NetServer.NSParticipantInfo.SetContactId(Integer)
   type: Method
-  summary: "\nContact ID of the participant if the participant is an associate or person\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetContactId(Integer contactId)
     parameters:
     - id: contactId
       type: CRMScript.Global.Integer
-      description: 
+      description: Contact ID of the participant if the participant is an associate or person
     return:
       type: CRMScript.Global.Void
   example: 
@@ -214,14 +214,14 @@ items:
   nameWithType: NSParticipantInfo.SetEmailId(Integer)
   fullName: CRMScript.NetServer.NSParticipantInfo.SetEmailId(Integer)
   type: Method
-  summary: "\nThe email ID of the email belonging to the appointment record belonging to this person\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetEmailId(Integer emailId)
     parameters:
     - id: emailId
       type: CRMScript.Global.Integer
-      description: 
+      description: The email ID of the email belonging to the appointment record belonging to this person
     return:
       type: CRMScript.Global.Void
   example: 
@@ -236,14 +236,14 @@ items:
   nameWithType: NSParticipantInfo.SetInvitationStatus(Integer)
   fullName: CRMScript.NetServer.NSParticipantInfo.SetInvitationStatus(Integer)
   type: Method
-  summary: "\nThe participant status for the appointment\n"
-  remarks: "\nSee <xref href=\"CRMScript.NetServer.InvitationStatus\" data-throw-if-not-resolved=\"false\"></xref>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetInvitationStatus(Integer invitationStatus)
     parameters:
     - id: invitationStatus
       type: CRMScript.Global.Integer
-      description: 
+      description: The participant status for the appointment. See <xref href=\"CRMScript.NetServer.InvitationStatus\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -258,14 +258,14 @@ items:
   nameWithType: NSParticipantInfo.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSParticipantInfo.SetPersonId(Integer)
   type: Method
-  summary: "\nPerson ID of the participant if the participant is a person\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
     parameters:
     - id: personId
       type: CRMScript.Global.Integer
-      description: 
+      description: Person ID of the participant if the participant is a person
     return:
       type: CRMScript.Global.Void
   example: 
@@ -280,14 +280,14 @@ items:
   nameWithType: NSParticipantInfo.SetSendEmail(Bool)
   fullName: CRMScript.NetServer.NSParticipantInfo.SetSendEmail(Bool)
   type: Method
-  summary: "\nTrue if the participant has been sent an email or should be sent an email\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSendEmail(Bool sendEmail)
     parameters:
     - id: sendEmail
       type: CRMScript.Global.Bool
-      description: 
+      description: True if the participant has been sent an email or should be sent an email
     return:
       type: CRMScript.Global.Void
   example: 
