--- a/docs/api-reference/CRMScript.NetServer.NSPersonSummary.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPersonSummary.yml
@@ -6,139 +6,25 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSPersonSummary.#ctor
   - CRMScript.NetServer.NSPersonSummary.GetChats()
   - CRMScript.NetServer.NSPersonSummary.GetDocuments()
   - CRMScript.NetServer.NSPersonSummary.GetFollowups()
   - CRMScript.NetServer.NSPersonSummary.GetPerson()
   - CRMScript.NetServer.NSPersonSummary.GetSales()
   - CRMScript.NetServer.NSPersonSummary.GetTickets()
-  - CRMScript.NetServer.NSPersonSummary.#ctor
-  - CRMScript.NetServer.NSPersonSummary.SetChats()
-  - CRMScript.NetServer.NSPersonSummary.SetDocuments()
-  - CRMScript.NetServer.NSPersonSummary.SetFollowups()
+  - CRMScript.NetServer.NSPersonSummary.SetChats(NSChatSummaryItem[])
+  - CRMScript.NetServer.NSPersonSummary.SetDocuments(NSActivitySummaryItem[])
+  - CRMScript.NetServer.NSPersonSummary.SetFollowups(NSActivitySummaryItem[])
   - CRMScript.NetServer.NSPersonSummary.SetPerson(NSPerson)
-  - CRMScript.NetServer.NSPersonSummary.SetSales()
-  - CRMScript.NetServer.NSPersonSummary.SetTickets()
+  - CRMScript.NetServer.NSPersonSummary.SetSales(NSSaleSummaryItem[])
+  - CRMScript.NetServer.NSPersonSummary.SetTickets(NSTicketSummaryItem[])
   name: NSPersonSummary
   nameWithType: NSPersonSummary
   fullName: CRMScript.NetServer.NSPersonSummary
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSPersonSummary.GetChats()
-  commentId: M:CRMScript.NetServer.NSPersonSummary.GetChats()
-  id: 'GetChats()'
-  so.intellisense: NSPersonSummary.GetChats
-  langs:
-  - crmscript
-  name: 'GetChats()'
-  nameWithType: NSPersonSummary.GetChats()
-  fullName: CRMScript.NetServer.NSPersonSummary.GetChats()
-  type: Method
-  summary: "\nRecent chats with person<p></p>\n<strong>Returns:</strong>NSChatSummaryItem[]<p></p>\n<pre><code>NSPersonSummary thing;\nNSChatSummaryItem[] chats = thing.GetChats();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSChatSummaryItem[] GetChats()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSChatSummaryItem[]
-  example: 
-  - "\n<pre><code>NSPersonSummary thing;\nNSChatSummaryItem[] chats = thing.GetChats();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPersonSummary.GetDocuments()
-  commentId: M:CRMScript.NetServer.NSPersonSummary.GetDocuments()
-  id: 'GetDocuments()'
-  so.intellisense: NSPersonSummary.GetDocuments
-  langs:
-  - crmscript
-  name: 'GetDocuments()'
-  nameWithType: NSPersonSummary.GetDocuments()
-  fullName: CRMScript.NetServer.NSPersonSummary.GetDocuments()
-  type: Method
-  summary: "\nRecent documents on person<p></p>\n<strong>Returns:</strong>NSActivitySummaryItem[]<p></p>\n<pre><code>NSPersonSummary thing;\nNSActivitySummaryItem[] documents = thing.GetDocuments();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSActivitySummaryItem[] GetDocuments()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSActivitySummaryItem[]
-  example: 
-  - "\n<pre><code>NSPersonSummary thing;\nNSActivitySummaryItem[] documents = thing.GetDocuments();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPersonSummary.GetFollowups()
-  commentId: M:CRMScript.NetServer.NSPersonSummary.GetFollowups()
-  id: 'GetFollowups()'
-  so.intellisense: NSPersonSummary.GetFollowups
-  langs:
-  - crmscript
-  name: 'GetFollowups()'
-  nameWithType: NSPersonSummary.GetFollowups()
-  fullName: CRMScript.NetServer.NSPersonSummary.GetFollowups()
-  type: Method
-  summary: "\nRecent follow-ups on person<p></p>\n<strong>Returns:</strong>NSActivitySummaryItem[]<p></p>\n<pre><code>NSPersonSummary thing;\nNSActivitySummaryItem[] followups = thing.GetFollowups();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSActivitySummaryItem[] GetFollowups()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSActivitySummaryItem[]
-  example: 
-  - "\n<pre><code>NSPersonSummary thing;\nNSActivitySummaryItem[] followups = thing.GetFollowups();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPersonSummary.GetPerson()
-  commentId: M:CRMScript.NetServer.NSPersonSummary.GetPerson()
-  id: 'GetPerson()'
-  so.intellisense: NSPersonSummary.GetPerson
-  langs:
-  - crmscript
-  name: 'GetPerson()'
-  nameWithType: NSPersonSummary.GetPerson()
-  fullName: CRMScript.NetServer.NSPersonSummary.GetPerson()
-  type: Method
-  summary: "\nSimple Person data.\n"
-  remarks: 
-  syntax: 
-    content: NSPerson GetPerson()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSPerson
-  example: 
-  - "\n<pre><code>NSPersonSummary thing;\nNSPerson person = thing.GetPerson();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPersonSummary.GetSales()
-  commentId: M:CRMScript.NetServer.NSPersonSummary.GetSales()
-  id: 'GetSales()'
-  so.intellisense: NSPersonSummary.GetSales
-  langs:
-  - crmscript
-  name: 'GetSales()'
-  nameWithType: NSPersonSummary.GetSales()
-  fullName: CRMScript.NetServer.NSPersonSummary.GetSales()
-  type: Method
-  summary: "\nRecent sales on person<p></p>\n<strong>Returns:</strong>NSSaleSummaryItem[]<p></p>\n<pre><code>NSPersonSummary thing;\nNSSaleSummaryItem[] sales = thing.GetSales();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSSaleSummaryItem[] GetSales()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSSaleSummaryItem[]
-  example: 
-  - "\n<pre><code>NSPersonSummary thing;\nNSSaleSummaryItem[] sales = thing.GetSales();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPersonSummary.GetTickets()
-  commentId: M:CRMScript.NetServer.NSPersonSummary.GetTickets()
-  id: 'GetTickets()'
-  so.intellisense: NSPersonSummary.GetTickets
-  langs:
-  - crmscript
-  name: 'GetTickets()'
-  nameWithType: NSPersonSummary.GetTickets()
-  fullName: CRMScript.NetServer.NSPersonSummary.GetTickets()
-  type: Method
-  summary: "\nRecent tickets on person<p></p>\n<strong>Returns:</strong>NSTicketSummaryItem[]<p></p>\n<pre><code>NSPersonSummary thing;\nNSTicketSummaryItem[] tickets = thing.GetTickets();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSTicketSummaryItem[] GetTickets()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSTicketSummaryItem[]
-  example: 
-  - "\n<pre><code>NSPersonSummary thing;\nNSTicketSummaryItem[] tickets = thing.GetTickets();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPersonSummary.#ctor
   commentId: M:CRMScript.NetServer.NSPersonSummary.#ctor
   id: '#ctor'
@@ -154,55 +40,190 @@ items:
   syntax: 
     content: NSPersonSummary
   example: 
-- uid: CRMScript.NetServer.NSPersonSummary.SetChats()
-  commentId: M:CRMScript.NetServer.NSPersonSummary.SetChats()
-  id: 'SetChats()'
+- uid: CRMScript.NetServer.NSPersonSummary.GetChats()
+  commentId: M:CRMScript.NetServer.NSPersonSummary.GetChats()
+  id: 'GetChats()'
+  so.intellisense: NSPersonSummary.GetChats
+  langs:
+  - crmscript
+  name: 'GetChats()'
+  nameWithType: NSPersonSummary.GetChats()
+  fullName: CRMScript.NetServer.NSPersonSummary.GetChats()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSChatSummaryItem[] GetChats()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSChatSummaryItem[]
+      description: Recent chats with person
+  example: 
+  - "\n<pre><code>NSPersonSummary thing;\nNSChatSummaryItem[] chats = thing.GetChats();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPersonSummary.GetDocuments()
+  commentId: M:CRMScript.NetServer.NSPersonSummary.GetDocuments()
+  id: 'GetDocuments()'
+  so.intellisense: NSPersonSummary.GetDocuments
+  langs:
+  - crmscript
+  name: 'GetDocuments()'
+  nameWithType: NSPersonSummary.GetDocuments()
+  fullName: CRMScript.NetServer.NSPersonSummary.GetDocuments()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSActivitySummaryItem[] GetDocuments()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSActivitySummaryItem[]
+      description: Recent documents on person
+  example: 
+  - "\n<pre><code>NSPersonSummary thing;\nNSActivitySummaryItem[] documents = thing.GetDocuments();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPersonSummary.GetFollowups()
+  commentId: M:CRMScript.NetServer.NSPersonSummary.GetFollowups()
+  id: 'GetFollowups()'
+  so.intellisense: NSPersonSummary.GetFollowups
+  langs:
+  - crmscript
+  name: 'GetFollowups()'
+  nameWithType: NSPersonSummary.GetFollowups()
+  fullName: CRMScript.NetServer.NSPersonSummary.GetFollowups()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSActivitySummaryItem[] GetFollowups()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSActivitySummaryItem[]
+      description: Recent follow-ups on person
+  example: 
+  - "\n<pre><code>NSPersonSummary thing;\nNSActivitySummaryItem[] followups = thing.GetFollowups();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPersonSummary.GetPerson()
+  commentId: M:CRMScript.NetServer.NSPersonSummary.GetPerson()
+  id: 'GetPerson()'
+  so.intellisense: NSPersonSummary.GetPerson
+  langs:
+  - crmscript
+  name: 'GetPerson()'
+  nameWithType: NSPersonSummary.GetPerson()
+  fullName: CRMScript.NetServer.NSPersonSummary.GetPerson()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSPerson GetPerson()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSPerson
+      description: Simple Person data.
+  example: 
+  - "\n<pre><code>NSPersonSummary thing;\nNSPerson person = thing.GetPerson();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPersonSummary.GetSales()
+  commentId: M:CRMScript.NetServer.NSPersonSummary.GetSales()
+  id: 'GetSales()'
+  so.intellisense: NSPersonSummary.GetSales
+  langs:
+  - crmscript
+  name: 'GetSales()'
+  nameWithType: NSPersonSummary.GetSales()
+  fullName: CRMScript.NetServer.NSPersonSummary.GetSales()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSSaleSummaryItem[] GetSales()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSSaleSummaryItem[]
+      description: Recent sales on person
+  example: 
+  - "\n<pre><code>NSPersonSummary thing;\nNSSaleSummaryItem[] sales = thing.GetSales();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPersonSummary.GetTickets()
+  commentId: M:CRMScript.NetServer.NSPersonSummary.GetTickets()
+  id: 'GetTickets()'
+  so.intellisense: NSPersonSummary.GetTickets
+  langs:
+  - crmscript
+  name: 'GetTickets()'
+  nameWithType: NSPersonSummary.GetTickets()
+  fullName: CRMScript.NetServer.NSPersonSummary.GetTickets()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSTicketSummaryItem[] GetTickets()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSTicketSummaryItem[]
+      description: Recent tickets on person
+  example: 
+  - "\n<pre><code>NSPersonSummary thing;\nNSTicketSummaryItem[] tickets = thing.GetTickets();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPersonSummary.SetChats(NSChatSummaryItem[])
+  commentId: M:CRMScript.NetServer.NSPersonSummary.SetChats(NSChatSummaryItem[])
+  id: 'SetChats(NSChatSummaryItem[])'
   so.intellisense: NSPersonSummary.SetChats
   langs:
   - crmscript
-  name: 'SetChats()'
-  nameWithType: NSPersonSummary.SetChats()
-  fullName: CRMScript.NetServer.NSPersonSummary.SetChats()
+  name: 'SetChats(NSChatSummaryItem[])'
+  nameWithType: NSPersonSummary.SetChats(NSChatSummaryItem[])
+  fullName: CRMScript.NetServer.NSPersonSummary.SetChats(NSChatSummaryItem[])
   type: Method
-  summary: "\nRecent chats with person\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetChats(NSChatSummaryItem[] chats)
     parameters:
+    - id: chats
+      type: CRMScript.NetServer.NSChatSummaryItem[]
+      description: Recent chats with person
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSPersonSummary thing;\nNSChatSummaryItem[] chats;\nthing.SetChats(chats);</code></pre>\n"
-- uid: CRMScript.NetServer.NSPersonSummary.SetDocuments()
-  commentId: M:CRMScript.NetServer.NSPersonSummary.SetDocuments()
-  id: 'SetDocuments()'
+- uid: CRMScript.NetServer.NSPersonSummary.SetDocuments(NSActivitySummaryItem[])
+  commentId: M:CRMScript.NetServer.NSPersonSummary.SetDocuments(NSActivitySummaryItem[])
+  id: 'SetDocuments(NSActivitySummaryItem[])'
   so.intellisense: NSPersonSummary.SetDocuments
   langs:
   - crmscript
-  name: 'SetDocuments()'
-  nameWithType: NSPersonSummary.SetDocuments()
-  fullName: CRMScript.NetServer.NSPersonSummary.SetDocuments()
+  name: 'SetDocuments(NSActivitySummaryItem[])'
+  nameWithType: NSPersonSummary.SetDocuments(NSActivitySummaryItem[])
+  fullName: CRMScript.NetServer.NSPersonSummary.SetDocuments(NSActivitySummaryItem[])
   type: Method
-  summary: "\nRecent documents on person\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDocuments(NSActivitySummaryItem[] documents)
     parameters:
+    - id: documents
+      type: CRMScript.NetServer.NSActivitySummaryItem[]
+      description: Recent documents on person
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSPersonSummary thing;\nNSActivitySummaryItem[] documents;\nthing.SetDocuments(documents);</code></pre>\n"
-- uid: CRMScript.NetServer.NSPersonSummary.SetFollowups()
-  commentId: M:CRMScript.NetServer.NSPersonSummary.SetFollowups()
-  id: 'SetFollowups()'
+- uid: CRMScript.NetServer.NSPersonSummary.SetFollowups(NSActivitySummaryItem[])
+  commentId: M:CRMScript.NetServer.NSPersonSummary.SetFollowups(NSActivitySummaryItem[])
+  id: 'SetFollowups(NSActivitySummaryItem[])'
   so.intellisense: NSPersonSummary.SetFollowups
   langs:
   - crmscript
-  name: 'SetFollowups()'
-  nameWithType: NSPersonSummary.SetFollowups()
-  fullName: CRMScript.NetServer.NSPersonSummary.SetFollowups()
+  name: 'SetFollowups(NSActivitySummaryItem[])'
+  nameWithType: NSPersonSummary.SetFollowups(NSActivitySummaryItem[])
+  fullName: CRMScript.NetServer.NSPersonSummary.SetFollowups(NSActivitySummaryItem[])
   type: Method
-  summary: "\nRecent follow-ups on person\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFollowups(NSActivitySummaryItem[] followups)
     parameters:
+    - id: followups
+      type: CRMScript.NetServer.NSActivitySummaryItem[]
+      description: Recent follow-ups on person
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSPersonSummary thing;\nNSActivitySummaryItem[] followups;\nthing.SetFollowups(followups);</code></pre>\n"
 - uid: CRMScript.NetServer.NSPersonSummary.SetPerson(NSPerson)
@@ -215,50 +236,58 @@ items:
   nameWithType: NSPersonSummary.SetPerson(NSPerson)
   fullName: CRMScript.NetServer.NSPersonSummary.SetPerson(NSPerson)
   type: Method
-  summary: "\nSimple Person data.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPerson(NSPerson person)
     parameters:
     - id: person
       type: CRMScript.NetServer.NSPerson
-      description: 
+      description: Simple Person data.
     return:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSPersonSummary thing;\nNSPerson person;\nthing.SetPerson(person);</code></pre>\n"
-- uid: CRMScript.NetServer.NSPersonSummary.SetSales()
-  commentId: M:CRMScript.NetServer.NSPersonSummary.SetSales()
-  id: 'SetSales()'
+- uid: CRMScript.NetServer.NSPersonSummary.SetSales(NSSaleSummaryItem[])
+  commentId: M:CRMScript.NetServer.NSPersonSummary.SetSales(NSSaleSummaryItem[])
+  id: 'SetSales(NSSaleSummaryItem[])'
   so.intellisense: NSPersonSummary.SetSales
   langs:
   - crmscript
-  name: 'SetSales()'
-  nameWithType: NSPersonSummary.SetSales()
-  fullName: CRMScript.NetServer.NSPersonSummary.SetSales()
+  name: 'SetSales(NSSaleSummaryItem[])'
+  nameWithType: NSPersonSummary.SetSales(NSSaleSummaryItem[])
+  fullName: CRMScript.NetServer.NSPersonSummary.SetSales(NSSaleSummaryItem[])
   type: Method
-  summary: "\nRecent sales on person\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSales(NSSaleSummaryItem[] sales)
     parameters:
+    - id: sales
+      type: CRMScript.NetServer.NSSaleSummaryItem[]
+      description: Recent sales on person
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSPersonSummary thing;\nNSSaleSummaryItem[] sales;\nthing.SetSales(sales);</code></pre>\n"
-- uid: CRMScript.NetServer.NSPersonSummary.SetTickets()
-  commentId: M:CRMScript.NetServer.NSPersonSummary.SetTickets()
-  id: 'SetTickets()'
+- uid: CRMScript.NetServer.NSPersonSummary.SetTickets(NSTicketSummaryItem[])
+  commentId: M:CRMScript.NetServer.NSPersonSummary.SetTickets(NSTicketSummaryItem[])
+  id: 'SetTickets(NSTicketSummaryItem[])'
   so.intellisense: NSPersonSummary.SetTickets
   langs:
   - crmscript
-  name: 'SetTickets()'
-  nameWithType: NSPersonSummary.SetTickets()
-  fullName: CRMScript.NetServer.NSPersonSummary.SetTickets()
+  name: 'SetTickets(NSTicketSummaryItem[])'
+  nameWithType: NSPersonSummary.SetTickets(NSTicketSummaryItem[])
+  fullName: CRMScript.NetServer.NSPersonSummary.SetTickets(NSTicketSummaryItem[])
   type: Method
-  summary: "\nRecent tickets on person\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTickets(NSTicketSummaryItem[] tickets)
     parameters:
+    - id: tickets
+      type: CRMScript.NetServer.NSTicketSummaryItem[]
+      description: Recent tickets on person
   example: 
   - "\n<pre><code>NSPersonSummary thing;\nNSTicketSummaryItem[] tickets;\nthing.SetTickets(tickets);</code></pre>\n"
 references:
