--- a/docs/api-reference/CRMScript.NetServer.NSPhoneListAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPhoneListAgent.yml
@@ -6,12 +6,12 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSPhoneListAgent.#ctor
   - CRMScript.NetServer.NSPhoneListAgent.AddToFavorites(Integer)
   - CRMScript.NetServer.NSPhoneListAgent.GetContactPhones(Integer)
   - CRMScript.NetServer.NSPhoneListAgent.GetDepartmentPhones(Integer)
   - CRMScript.NetServer.NSPhoneListAgent.GetFavoritesPhones()
   - CRMScript.NetServer.NSPhoneListAgent.GetPreferences()
-  - CRMScript.NetServer.NSPhoneListAgent.#ctor
   - CRMScript.NetServer.NSPhoneListAgent.Search(String)
   - CRMScript.NetServer.NSPhoneListAgent.SearchWithPreferences(String,NSPhoneListPreferences)
   - CRMScript.NetServer.NSPhoneListAgent.SetPreferences(NSPhoneListPreferences)
@@ -20,6 +20,22 @@ items:
   fullName: CRMScript.NetServer.NSPhoneListAgent
   type: Class
   summary: "\nCollection of all services for searching for person or contact (company) phone numbers.\n"
+  example: 
+  - "\n<pre><code>NSPhoneListAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
+- uid: CRMScript.NetServer.NSPhoneListAgent.#ctor
+  commentId: M:CRMScript.NetServer.NSPhoneListAgent.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSPhoneListAgent
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSPhoneListAgent.#ctor
+  fullName: CRMScript.NetServer.NSPhoneListAgent.#ctor
+  type: Constructor
+  summary: "\nCollection of all services for searching for person or contact (company) phone numbers.\n"
+  remarks: 
+  syntax: 
+    content: NSPhoneListAgent
   example: 
   - "\n<pre><code>NSPhoneListAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 - uid: CRMScript.NetServer.NSPhoneListAgent.AddToFavorites(Integer)
@@ -32,7 +48,7 @@ items:
   nameWithType: NSPhoneListAgent.AddToFavorites(Integer)
   fullName: CRMScript.NetServer.NSPhoneListAgent.AddToFavorites(Integer)
   type: Method
-  summary: "\nAdds a new contact to the history/favorites. Returns the rank of the new history item. If the contact already existed in the history, it isn't added but the rank is updated.\n"
+  summary: "\nAdds a new contact to the history/favorites. If the contact already existed in the history, it isn't added but the rank is updated.\n"
   remarks: 
   syntax: 
     content: Integer AddToFavorites(Integer contactId)
@@ -42,7 +58,7 @@ items:
       description: 
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: the rank of the new history item
   example: 
   - "\n<pre><code>NSPhoneListAgent agent;\nInteger contactId;\nInteger res = agent.AddToFavorites(contactId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSPhoneListAgent.GetContactPhones(Integer)
@@ -55,14 +71,14 @@ items:
   nameWithType: NSPhoneListAgent.GetContactPhones(Integer)
   fullName: CRMScript.NetServer.NSPhoneListAgent.GetContactPhones(Integer)
   type: Method
-  summary: "\nReturns an array of phone list items for all the persons belonging to a contact (company). The in-parameter must be a valid contact-id.\n"
+  summary: "\nReturns an array of phone list items for all the persons belonging to a contact (company).\n"
   remarks: 
   syntax: 
     content: NSPhoneListItem[] GetContactPhones(Integer contactId)
     parameters:
     - id: contactId
       type: CRMScript.Global.Integer
-      description: 
+      description: must be a valid contact ID
     return:
       type: CRMScript.NetServer.NSPhoneListItem[]
   example: 
@@ -77,14 +93,14 @@ items:
   nameWithType: NSPhoneListAgent.GetDepartmentPhones(Integer)
   fullName: CRMScript.NetServer.NSPhoneListAgent.GetDepartmentPhones(Integer)
   type: Method
-  summary: "\nReturns an array of phone list items with the in-parameter as restriction. The in-parameter must be a valid department id (UserGroupId).\n"
+  summary: "\nReturns an array of phone list items with the in-parameter as restriction.\n"
   remarks: 
   syntax: 
     content: NSPhoneListItem[] GetDepartmentPhones(Integer departmentId)
     parameters:
     - id: departmentId
       type: CRMScript.Global.Integer
-      description: 
+      description: must be a valid department ID (UserGroupId).
     return:
       type: CRMScript.NetServer.NSPhoneListItem[]
   example: 
@@ -99,7 +115,7 @@ items:
   nameWithType: NSPhoneListAgent.GetFavoritesPhones()
   fullName: CRMScript.NetServer.NSPhoneListAgent.GetFavoritesPhones()
   type: Method
-  summary: "\nReturns an array of phone list items with the Contacts in the users favorites dropdown list.<p></p>\n<strong>Returns:</strong>NSPhoneListItem[]<p></p>\n<pre><code>NSPhoneListAgent agent;\nNSPhoneListItem[] res = agent.GetFavoritesPhones();</code></pre>\n"
+  summary: "\nReturns an array of phone list items with the Contacts in the users favorites dropdown list.\n"
   remarks: 
   syntax: 
     content: NSPhoneListItem[] GetFavoritesPhones()
@@ -118,7 +134,7 @@ items:
   nameWithType: NSPhoneListAgent.GetPreferences()
   fullName: CRMScript.NetServer.NSPhoneListAgent.GetPreferences()
   type: Method
-  summary: "\nGetting Phone List Preferences from the CRM 5 user preferences\n"
+  summary: "\nGets Phone List Preferences from the CRM 5 user preferences\n"
   remarks: 
   syntax: 
     content: NSPhoneListPreferences GetPreferences()
@@ -127,22 +143,6 @@ items:
       type: CRMScript.NetServer.NSPhoneListPreferences
   example: 
   - "\n<pre><code>NSPhoneListAgent agent;\nNSPhoneListPreferences res = agent.GetPreferences();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPhoneListAgent.#ctor
-  commentId: M:CRMScript.NetServer.NSPhoneListAgent.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSPhoneListAgent
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSPhoneListAgent.#ctor
-  fullName: CRMScript.NetServer.NSPhoneListAgent.#ctor
-  type: Constructor
-  summary: "\nCollection of all services for searching for person or contact (company) phone numbers.\n"
-  remarks: 
-  syntax: 
-    content: NSPhoneListAgent
-  example: 
-  - "\n<pre><code>NSPhoneListAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 - uid: CRMScript.NetServer.NSPhoneListAgent.Search(String)
   commentId: M:CRMScript.NetServer.NSPhoneListAgent.Search(String)
   id: 'Search(String)'
@@ -153,7 +153,7 @@ items:
   nameWithType: NSPhoneListAgent.Search(String)
   fullName: CRMScript.NetServer.NSPhoneListAgent.Search(String)
   type: Method
-  summary: "\nSearching the phone list. Using default search preferences or the preferences already set by the NSPhoneListPreferences Service\n"
+  summary: "\nSearches the phone list using default search preferences or the preferences already set by the NSPhoneListPreferences Service\n"
   remarks: 
   syntax: 
     content: NSPhoneListItem[] Search(String searchString)
@@ -175,7 +175,7 @@ items:
   nameWithType: NSPhoneListAgent.SearchWithPreferences(String,NSPhoneListPreferences)
   fullName: CRMScript.NetServer.NSPhoneListAgent.SearchWithPreferences(String,NSPhoneListPreferences)
   type: Method
-  summary: "\nSearching the phone list. Search is based on the supplied preferences.\n"
+  summary: "\nSearches the phone list based on the supplied preferences.\n"
   remarks: 
   syntax: 
     content: NSPhoneListItem[] SearchWithPreferences(String searchString, NSPhoneListPreferences preferences)
@@ -200,7 +200,7 @@ items:
   nameWithType: NSPhoneListAgent.SetPreferences(NSPhoneListPreferences)
   fullName: CRMScript.NetServer.NSPhoneListAgent.SetPreferences(NSPhoneListPreferences)
   type: Method
-  summary: "\nSetting Phone List Preferences to the CRM 5 user preferences\n"
+  summary: "\nSets Phone List Preferences to the CRM 5 user preferences\n"
   remarks: 
   syntax: 
     content: Void SetPreferences(NSPhoneListPreferences preferences)
