--- a/docs/api-reference/CRMScript.NetServer.NSPocketAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketAgent.yml
@@ -6,13 +6,13 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSPocketAgent.#ctor
   - CRMScript.NetServer.NSPocketAgent.GetPocketStartupData(String[])
   - CRMScript.NetServer.NSPocketAgent.GetPushNotificationTagsForDevice(String)
   - CRMScript.NetServer.NSPocketAgent.GetRegisteredDevices(Integer)
-  - CRMScript.NetServer.NSPocketAgent.#ctor
   - CRMScript.NetServer.NSPocketAgent.RegisterDeviceForPushNotification(PocketDeviceInfo)
   - CRMScript.NetServer.NSPocketAgent.RunAppointmentAlarmBroker()
-  - CRMScript.NetServer.NSPocketAgent.SendPushNotification(Integer[])
+  - CRMScript.NetServer.NSPocketAgent.SendPushNotification(Integer[],PocketNotificationMessage)
   - CRMScript.NetServer.NSPocketAgent.SetPushNotificationTagsForDevice(String,String)
   - CRMScript.NetServer.NSPocketAgent.SetPushNotificationTagsForUser(Integer,String)
   name: NSPocketAgent
@@ -20,6 +20,22 @@ items:
   fullName: CRMScript.NetServer.NSPocketAgent
   type: Class
   summary: "\nAgent with Pocket specific functionality.\n"
+  example: 
+  - "\n<pre><code>NSPocketAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
+- uid: CRMScript.NetServer.NSPocketAgent.#ctor
+  commentId: M:CRMScript.NetServer.NSPocketAgent.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSPocketAgent
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSPocketAgent.#ctor
+  fullName: CRMScript.NetServer.NSPocketAgent.#ctor
+  type: Constructor
+  summary: "\nAgent with Pocket specific functionality.\n"
+  remarks: 
+  syntax: 
+    content: NSPocketAgent
   example: 
   - "\n<pre><code>NSPocketAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 - uid: CRMScript.NetServer.NSPocketAgent.GetPocketStartupData(String[])
@@ -40,6 +56,9 @@ items:
     - id: tables
       type: CRMScript.Global.String[]
       description: 
+    - id: currentClientTime
+      type: CRMScript.Global.DateTime
+      description: 
     return:
       type: CRMScript.NetServer.NSPocketStartupData
   example: 
@@ -54,7 +73,7 @@ items:
   nameWithType: NSPocketAgent.GetPushNotificationTagsForDevice(String)
   fullName: CRMScript.NetServer.NSPocketAgent.GetPushNotificationTagsForDevice(String)
   type: Method
-  summary: "\nRetrieve current tag value for a device\n"
+  summary: "\nRetrieves current tag value for a device\n"
   remarks: 
   syntax: 
     content: String GetPushNotificationTagsForDevice(String deviceIdentifier)
@@ -77,7 +96,7 @@ items:
   nameWithType: NSPocketAgent.GetRegisteredDevices(Integer)
   fullName: CRMScript.NetServer.NSPocketAgent.GetRegisteredDevices(Integer)
   type: Method
-  summary: "\nRetrieve all registered devices for an associate\n"
+  summary: "\nRetrieves all registered devices for an associate\n"
   remarks: 
   syntax: 
     content: PocketDeviceInfo[] GetRegisteredDevices(Integer associateId)
@@ -88,22 +107,6 @@ items:
     return:
       type: CRMScript.Native.PocketDeviceInfo[]
   example: 
-- uid: CRMScript.NetServer.NSPocketAgent.#ctor
-  commentId: M:CRMScript.NetServer.NSPocketAgent.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSPocketAgent
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSPocketAgent.#ctor
-  fullName: CRMScript.NetServer.NSPocketAgent.#ctor
-  type: Constructor
-  summary: "\nAgent with Pocket specific functionality.\n"
-  remarks: 
-  syntax: 
-    content: NSPocketAgent
-  example: 
-  - "\n<pre><code>NSPocketAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 - uid: CRMScript.NetServer.NSPocketAgent.RegisterDeviceForPushNotification(PocketDeviceInfo)
   commentId: M:CRMScript.NetServer.NSPocketAgent.RegisterDeviceForPushNotification(PocketDeviceInfo)
   id: 'RegisterDeviceForPushNotification(PocketDeviceInfo)'
@@ -114,7 +117,7 @@ items:
   nameWithType: NSPocketAgent.RegisterDeviceForPushNotification(PocketDeviceInfo)
   fullName: CRMScript.NetServer.NSPocketAgent.RegisterDeviceForPushNotification(PocketDeviceInfo)
   type: Method
-  summary: "\nRegister a device that should receive push notifications when notable events occour\n"
+  summary: "\nRegisters a device that should receive push notifications when notable events occur\n"
   remarks: 
   syntax: 
     content: Void RegisterDeviceForPushNotification(PocketDeviceInfo deviceInfo)
@@ -135,7 +138,7 @@ items:
   nameWithType: NSPocketAgent.RunAppointmentAlarmBroker()
   fullName: CRMScript.NetServer.NSPocketAgent.RunAppointmentAlarmBroker()
   type: Method
-  summary: "\nExecute the AppointmentAlarmBroker once\n"
+  summary: "\nExecutes the AppointmentAlarmBroker once\n"
   remarks: 
   syntax: 
     content: Void RunAppointmentAlarmBroker()
@@ -143,17 +146,17 @@ items:
     return:
       type: CRMScript.Global.Void
   example: 
-- uid: CRMScript.NetServer.NSPocketAgent.SendPushNotification(Integer[])
-  commentId: M:CRMScript.NetServer.NSPocketAgent.SendPushNotification(Integer[])
-  id: 'SendPushNotification(Integer[])'
+- uid: CRMScript.NetServer.NSPocketAgent.SendPushNotification(Integer[],PocketNotificationMessage)
+  commentId: M:CRMScript.NetServer.NSPocketAgent.SendPushNotification(Integer[],PocketNotificationMessage)
+  id: 'SendPushNotification(Integer[],PocketNotificationMessage)'
   so.intellisense: NSPocketAgent.SendPushNotification
   langs:
   - crmscript
-  name: 'SendPushNotification(Integer[])'
-  nameWithType: NSPocketAgent.SendPushNotification(Integer[])
-  fullName: CRMScript.NetServer.NSPocketAgent.SendPushNotification(Integer[])
+  name: 'SendPushNotification(Integer[],PocketNotificationMessage)'
+  nameWithType: NSPocketAgent.SendPushNotification(Integer[],PocketNotificationMessage)
+  fullName: CRMScript.NetServer.NSPocketAgent.SendPushNotification(Integer[],PocketNotificationMessage)
   type: Method
-  summary: "\nSend a push notification to one or more associates\n"
+  summary: "\nSends a push notification to one or more associates\n"
   remarks: 
   syntax: 
     content: Void SendPushNotification(Integer[] associateIds, PocketNotificationMessage message)
@@ -161,6 +164,9 @@ items:
     - id: associateIds
       type: CRMScript.Global.Integer[]
       description: 
+    - id: message
+      type: CRMScript.NetServer.PocketNotificationMessage
+      description:
     return:
       type: CRMScript.Global.Void
   example: 
@@ -174,7 +180,7 @@ items:
   nameWithType: NSPocketAgent.SetPushNotificationTagsForDevice(String,String)
   fullName: CRMScript.NetServer.NSPocketAgent.SetPushNotificationTagsForDevice(String,String)
   type: Method
-  summary: "\nSpecify what kind of notification events a device should receive push notifications for\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPushNotificationTagsForDevice(String deviceIdentifier, String tags)
@@ -184,7 +190,7 @@ items:
       description: 
     - id: tags
       type: CRMScript.Global.String
-      description: 
+      description: the notification events a device should receive push notifications for
     return:
       type: CRMScript.Global.Void
   example: 
@@ -198,8 +204,8 @@ items:
   nameWithType: NSPocketAgent.SetPushNotificationTagsForUser(Integer,String)
   fullName: CRMScript.NetServer.NSPocketAgent.SetPushNotificationTagsForUser(Integer,String)
   type: Method
-  summary: "\nSpecify what kind of notification events a user should receive push notifications for.  This will update all registerred devices for this user.\n"
-  remarks: 
+  summary: ""
+  remarks: "\nThis will update all registered devices for this user.\n"
   syntax: 
     content: Void SetPushNotificationTagsForUser(Integer associateId, String tags)
     parameters:
@@ -208,7 +214,7 @@ items:
       description: 
     - id: tags
       type: CRMScript.Global.String
-      description: 
+      description: the notification events a user should receive push notifications for
     return:
       type: CRMScript.Global.Void
   example: 
