--- a/docs/api-reference/CRMScript.NetServer.NSPocketDeviceInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketDeviceInfo.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSPocketDeviceInfo.#ctor
   - CRMScript.NetServer.NSPocketDeviceInfo.GetDeviceIdentifier()
   - CRMScript.NetServer.NSPocketDeviceInfo.GetDeviceName()
   - CRMScript.NetServer.NSPocketDeviceInfo.GetLanguage()
@@ -13,7 +14,6 @@ items:
   - CRMScript.NetServer.NSPocketDeviceInfo.GetPlatform()
   - CRMScript.NetServer.NSPocketDeviceInfo.GetPNSHandle()
   - CRMScript.NetServer.NSPocketDeviceInfo.GetPocketVersion()
-  - CRMScript.NetServer.NSPocketDeviceInfo.#ctor
   - CRMScript.NetServer.NSPocketDeviceInfo.SetDeviceIdentifier(String)
   - CRMScript.NetServer.NSPocketDeviceInfo.SetDeviceName(String)
   - CRMScript.NetServer.NSPocketDeviceInfo.SetLanguage(String)
@@ -27,146 +27,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSPocketDeviceInfo.GetDeviceIdentifier()
-  commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.GetDeviceIdentifier()
-  id: 'GetDeviceIdentifier()'
-  so.intellisense: NSPocketDeviceInfo.GetDeviceIdentifier
-  langs:
-  - crmscript
-  name: 'GetDeviceIdentifier()'
-  nameWithType: NSPocketDeviceInfo.GetDeviceIdentifier()
-  fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetDeviceIdentifier()
-  type: Method
-  summary: "\nA unique identifier of this device. This value should always be the same for the same device\n"
-  remarks: 
-  syntax: 
-    content: String GetDeviceIdentifier()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPocketDeviceInfo thing;\nString deviceIdentifier = thing.GetDeviceIdentifier();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPocketDeviceInfo.GetDeviceName()
-  commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.GetDeviceName()
-  id: 'GetDeviceName()'
-  so.intellisense: NSPocketDeviceInfo.GetDeviceName
-  langs:
-  - crmscript
-  name: 'GetDeviceName()'
-  nameWithType: NSPocketDeviceInfo.GetDeviceName()
-  fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetDeviceName()
-  type: Method
-  summary: "\nA friendly display name for the device. Ex: 'Bobbys iPhone 5S'\n"
-  remarks: 
-  syntax: 
-    content: String GetDeviceName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPocketDeviceInfo thing;\nString deviceName = thing.GetDeviceName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPocketDeviceInfo.GetLanguage()
-  commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.GetLanguage()
-  id: 'GetLanguage()'
-  so.intellisense: NSPocketDeviceInfo.GetLanguage
-  langs:
-  - crmscript
-  name: 'GetLanguage()'
-  nameWithType: NSPocketDeviceInfo.GetLanguage()
-  fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetLanguage()
-  type: Method
-  summary: "\nThe language which this device will receive notifications translated in\n"
-  remarks: 
-  syntax: 
-    content: String GetLanguage()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPocketDeviceInfo thing;\nString language = thing.GetLanguage();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPocketDeviceInfo.GetOSVersion()
-  commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.GetOSVersion()
-  id: 'GetOSVersion()'
-  so.intellisense: NSPocketDeviceInfo.GetOSVersion
-  langs:
-  - crmscript
-  name: 'GetOSVersion()'
-  nameWithType: NSPocketDeviceInfo.GetOSVersion()
-  fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetOSVersion()
-  type: Method
-  summary: "\nThe operating system version. Ex: 'iOS v10.2'\n"
-  remarks: 
-  syntax: 
-    content: String GetOSVersion()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPocketDeviceInfo thing;\nString oSVersion = thing.GetOSVersion();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPocketDeviceInfo.GetPlatform()
-  commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.GetPlatform()
-  id: 'GetPlatform()'
-  so.intellisense: NSPocketDeviceInfo.GetPlatform
-  langs:
-  - crmscript
-  name: 'GetPlatform()'
-  nameWithType: NSPocketDeviceInfo.GetPlatform()
-  fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetPlatform()
-  type: Method
-  summary: "\nWhat platform does this device belong to<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<ul><li>Enum: 0 = Apple</li><li>Enum: 1 = Google</li><li>Enum: 2 = Microsoft</li><li>Enum: 3 = AppleDeveloper</li><li>Enum: 4 = AppleAdHoc</li><li>Enum: 5 = GoogleDeveloper</li></ul><pre><code>NSPocketDeviceInfo thing;\nInteger platform = thing.GetPlatform();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetPlatform()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSPocketDeviceInfo thing;\nInteger platform = thing.GetPlatform();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPocketDeviceInfo.GetPNSHandle()
-  commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.GetPNSHandle()
-  id: 'GetPNSHandle()'
-  so.intellisense: NSPocketDeviceInfo.GetPNSHandle
-  langs:
-  - crmscript
-  name: 'GetPNSHandle()'
-  nameWithType: NSPocketDeviceInfo.GetPNSHandle()
-  fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetPNSHandle()
-  type: Method
-  summary: "\nThe identifier associated with the device that will be used when talking with vendors push services\n"
-  remarks: 
-  syntax: 
-    content: String GetPNSHandle()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPocketDeviceInfo thing;\nString pNSHandle = thing.GetPNSHandle();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPocketDeviceInfo.GetPocketVersion()
-  commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.GetPocketVersion()
-  id: 'GetPocketVersion()'
-  so.intellisense: NSPocketDeviceInfo.GetPocketVersion
-  langs:
-  - crmscript
-  name: 'GetPocketVersion()'
-  nameWithType: NSPocketDeviceInfo.GetPocketVersion()
-  fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetPocketVersion()
-  type: Method
-  summary: "\nWhat version of Pocket CRM this device is running. Ex: '8.0.37'\n"
-  remarks: 
-  syntax: 
-    content: String GetPocketVersion()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPocketDeviceInfo thing;\nString pocketVersion = thing.GetPocketVersion();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPocketDeviceInfo.#ctor
   commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.#ctor
   id: '#ctor'
@@ -182,6 +42,146 @@ items:
   syntax: 
     content: NSPocketDeviceInfo
   example: 
+- uid: CRMScript.NetServer.NSPocketDeviceInfo.GetDeviceIdentifier()
+  commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.GetDeviceIdentifier()
+  id: 'GetDeviceIdentifier()'
+  so.intellisense: NSPocketDeviceInfo.GetDeviceIdentifier
+  langs:
+  - crmscript
+  name: 'GetDeviceIdentifier()'
+  nameWithType: NSPocketDeviceInfo.GetDeviceIdentifier()
+  fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetDeviceIdentifier()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDeviceIdentifier()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: A unique identifier of this device. This value should always be the same for the same device
+  example: 
+  - "\n<pre><code>NSPocketDeviceInfo thing;\nString deviceIdentifier = thing.GetDeviceIdentifier();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPocketDeviceInfo.GetDeviceName()
+  commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.GetDeviceName()
+  id: 'GetDeviceName()'
+  so.intellisense: NSPocketDeviceInfo.GetDeviceName
+  langs:
+  - crmscript
+  name: 'GetDeviceName()'
+  nameWithType: NSPocketDeviceInfo.GetDeviceName()
+  fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetDeviceName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDeviceName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: A friendly display name for the device. For example, 'Bobbys iPhone 5S'
+  example: 
+  - "\n<pre><code>NSPocketDeviceInfo thing;\nString deviceName = thing.GetDeviceName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPocketDeviceInfo.GetLanguage()
+  commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.GetLanguage()
+  id: 'GetLanguage()'
+  so.intellisense: NSPocketDeviceInfo.GetLanguage
+  langs:
+  - crmscript
+  name: 'GetLanguage()'
+  nameWithType: NSPocketDeviceInfo.GetLanguage()
+  fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetLanguage()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetLanguage()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The language which this device will receive notifications translated in
+  example: 
+  - "\n<pre><code>NSPocketDeviceInfo thing;\nString language = thing.GetLanguage();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPocketDeviceInfo.GetOSVersion()
+  commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.GetOSVersion()
+  id: 'GetOSVersion()'
+  so.intellisense: NSPocketDeviceInfo.GetOSVersion
+  langs:
+  - crmscript
+  name: 'GetOSVersion()'
+  nameWithType: NSPocketDeviceInfo.GetOSVersion()
+  fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetOSVersion()
+  type: Method
+  summary: "\n'\n"
+  remarks: 
+  syntax: 
+    content: String GetOSVersion()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The operating system version. For example, 'iOS v10.2
+  example: 
+  - "\n<pre><code>NSPocketDeviceInfo thing;\nString oSVersion = thing.GetOSVersion();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPocketDeviceInfo.GetPlatform()
+  commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.GetPlatform()
+  id: 'GetPlatform()'
+  so.intellisense: NSPocketDeviceInfo.GetPlatform
+  langs:
+  - crmscript
+  name: 'GetPlatform()'
+  nameWithType: NSPocketDeviceInfo.GetPlatform()
+  fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetPlatform()
+  type: Method
+  summary: "\n<ul><li>Enum: 0 = Apple</li><li>Enum: 1 = Google</li><li>Enum: 2 = Microsoft</li><li>Enum: 3 = AppleDeveloper</li><li>Enum: 4 = AppleAdHoc</li><li>Enum: 5 = GoogleDeveloper</li></ul>\n"
+  remarks: 
+  syntax: 
+    content: Integer GetPlatform()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: What platform does this device belong to
+  example: 
+  - "\n<pre><code>NSPocketDeviceInfo thing;\nInteger platform = thing.GetPlatform();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPocketDeviceInfo.GetPNSHandle()
+  commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.GetPNSHandle()
+  id: 'GetPNSHandle()'
+  so.intellisense: NSPocketDeviceInfo.GetPNSHandle
+  langs:
+  - crmscript
+  name: 'GetPNSHandle()'
+  nameWithType: NSPocketDeviceInfo.GetPNSHandle()
+  fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetPNSHandle()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetPNSHandle()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The identifier associated with the device that will be used when talking with vendors push services
+  example: 
+  - "\n<pre><code>NSPocketDeviceInfo thing;\nString pNSHandle = thing.GetPNSHandle();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPocketDeviceInfo.GetPocketVersion()
+  commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.GetPocketVersion()
+  id: 'GetPocketVersion()'
+  so.intellisense: NSPocketDeviceInfo.GetPocketVersion
+  langs:
+  - crmscript
+  name: 'GetPocketVersion()'
+  nameWithType: NSPocketDeviceInfo.GetPocketVersion()
+  fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetPocketVersion()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetPocketVersion()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: What version of Pocket CRM this device is running. For example, '8.0.37'
+  example: 
+  - "\n<pre><code>NSPocketDeviceInfo thing;\nString pocketVersion = thing.GetPocketVersion();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPocketDeviceInfo.SetDeviceIdentifier(String)
   commentId: M:CRMScript.NetServer.NSPocketDeviceInfo.SetDeviceIdentifier(String)
   id: 'SetDeviceIdentifier(String)'
@@ -192,14 +192,14 @@ items:
   nameWithType: NSPocketDeviceInfo.SetDeviceIdentifier(String)
   fullName: CRMScript.NetServer.NSPocketDeviceInfo.SetDeviceIdentifier(String)
   type: Method
-  summary: "\nA unique identifier of this device. This value should always be the same for the same device\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDeviceIdentifier(String deviceIdentifier)
     parameters:
     - id: deviceIdentifier
       type: CRMScript.Global.String
-      description: 
+      description: A unique identifier of this device. This value should always be the same for the same device
     return:
       type: CRMScript.Global.Void
   example: 
@@ -214,14 +214,14 @@ items:
   nameWithType: NSPocketDeviceInfo.SetDeviceName(String)
   fullName: CRMScript.NetServer.NSPocketDeviceInfo.SetDeviceName(String)
   type: Method
-  summary: "\nA friendly display name for the device. Ex: 'Bobbys iPhone 5S'\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDeviceName(String deviceName)
     parameters:
     - id: deviceName
       type: CRMScript.Global.String
-      description: 
+      description: A friendly display name for the device. For example, 'Bobbys iPhone 5S'
     return:
       type: CRMScript.Global.Void
   example: 
@@ -236,14 +236,14 @@ items:
   nameWithType: NSPocketDeviceInfo.SetLanguage(String)
   fullName: CRMScript.NetServer.NSPocketDeviceInfo.SetLanguage(String)
   type: Method
-  summary: "\nThe language which this device will receive notifications translated in\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLanguage(String language)
     parameters:
     - id: language
       type: CRMScript.Global.String
-      description: 
+      description: The language which this device will receive notifications translated in
     return:
       type: CRMScript.Global.Void
   example: 
@@ -258,14 +258,14 @@ items:
   nameWithType: NSPocketDeviceInfo.SetOSVersion(String)
   fullName: CRMScript.NetServer.NSPocketDeviceInfo.SetOSVersion(String)
   type: Method
-  summary: "\nThe operating system version. Ex: 'iOS v10.2'\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetOSVersion(String oSVersion)
     parameters:
     - id: oSVersion
       type: CRMScript.Global.String
-      description: 
+      description: The operating system version. For example, 'iOS v10.2'
     return:
       type: CRMScript.Global.Void
   example: 
@@ -280,14 +280,14 @@ items:
   nameWithType: NSPocketDeviceInfo.SetPlatform(Integer)
   fullName: CRMScript.NetServer.NSPocketDeviceInfo.SetPlatform(Integer)
   type: Method
-  summary: "\nWhat platform does this device belong to\n"
-  remarks: "\n<p>See enum platform.</p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetPlatform(Integer platform)
     parameters:
     - id: platform
       type: CRMScript.Global.Integer
-      description: 
+      description: What platform does this device belong to See enum platform.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -302,14 +302,14 @@ items:
   nameWithType: NSPocketDeviceInfo.SetPNSHandle(String)
   fullName: CRMScript.NetServer.NSPocketDeviceInfo.SetPNSHandle(String)
   type: Method
-  summary: "\nThe identifier associated with the device that will be used when talking with vendors push services\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPNSHandle(String pNSHandle)
     parameters:
     - id: pNSHandle
       type: CRMScript.Global.String
-      description: 
+      description: The identifier associated with the device that will be used when talking with vendors push services
     return:
       type: CRMScript.Global.Void
   example: 
@@ -324,14 +324,14 @@ items:
   nameWithType: NSPocketDeviceInfo.SetPocketVersion(String)
   fullName: CRMScript.NetServer.NSPocketDeviceInfo.SetPocketVersion(String)
   type: Method
-  summary: "\nWhat version of Pocket CRM this device is running. Ex: '8.0.37'\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPocketVersion(String pocketVersion)
     parameters:
     - id: pocketVersion
       type: CRMScript.Global.String
-      description: 
+      description: What version of Pocket CRM this device is running. For example, '8.0.37'
     return:
       type: CRMScript.Global.Void
   example: 
