--- a/docs/api-reference/CRMScript.NetServer.NSViewStateAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSViewStateAgent.yml
@@ -191,7 +191,7 @@ items:
   nameWithType: NSViewStateAgent.GetHistoryLengthPrefValue()
   fullName: CRMScript.NetServer.NSViewStateAgent.GetHistoryLengthPrefValue()
   type: Method
-  summary: "\nGets the logged on user's preferred history list length. Will return the system preference if no user preferences are available.\n"
+  summary: "\nGets the logged-on user's preferred history list length. Will return the system preference if no user preferences are available.\n"
   remarks: 
   syntax: 
     content: Integer GetHistoryLengthPrefValue()
@@ -346,7 +346,7 @@ items:
   nameWithType: NSViewStateAgent.SetHistoryLengthPrefValue(Integer)
   fullName: CRMScript.NetServer.NSViewStateAgent.SetHistoryLengthPrefValue(Integer)
   type: Method
-  summary: "\nSets the logged on user's preferred history list length.\n"
+  summary: "\nSets the logged-on user's preferred history list length.\n"
   remarks: 
   syntax: 
     content: Void SetHistoryLengthPrefValue(Integer length)
